Update for Patch v3.9.3 - checksum: dcaf

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -29,7 +29,7 @@
  RELICS_FOUND_TOOLTIP:1 "เราค้นพบวัตถุโบราณ $NUM|Y$ ชิ้น"
  ACTIVATE_RELIC_FOR_TRIUMPH:0 "เปิดใช้งานวัตถุหรือชิ้นส่วนโบราณ"
  CLICK_ACTIVATE_RELIC_FOR_TRIUMPH:0 "§Gคลิกเพื่อ $ACTIVATE_RELIC_FOR_TRIUMPH$§!"
- ACTIVATE_RELIC_FOR_TRIUMPH_TOOLTIP:0 "Click on a Relic to activate a Triumph and gain empire-wide timed effects."
+ ACTIVATE_RELIC_FOR_TRIUMPH_TOOLTIP:0 "คลิกที่วัตถุโบราณเพื่อเปิดใช้งานและรับเอฟเฟกต์หมดเวลาทั่วทั้งจักรวรรดิ"
  ACTIVE_TRIUMPH:0 "เปิดใช้งาน"
  ACTIVE_TRIUMPH_TEXT:0 "เปิดใช้งานเป็นระยะเวลา:"
  ACTIVE_TRIUMPH_VALUE:0 "£time£ $VALUE|0$"
@@ -211,7 +211,7 @@
  artifact_sell_cooldown:0 "เวลาคูลดาวน์ $artifact_sell_collector$"
  artifact_arcane_deciphering:0 "เทคโนโลยี Arcane แบบวิศวกรรมย้อนกลับ"
  artifact_arcane_deciphering_desc:0 "Have some minor artifacts broken down and examined by our scientists, to see what insights they will yield for our own research."
- artifact_arcane_deciphering_effect:0 "Break down £minor_artifacts£Minor Artifacts for random technology bonuses. Gain progress in a random tech, gain research points or gain a temporary research speed bonus.\n\nเวลาคูลดาวน์: £time£ §Y720§!"
+ artifact_arcane_deciphering_effect:0 "ทำการแยก £minor_artifacts£ศิลปวัตถุชั้นรอง เป็นหลายชิ้นเพื่อศึกษาแล้วรับโบนัสเทคโนโลยีแบบสุ่ม ได้รับความก้าวหน้าในเทคโนโลยีแบบสุ่ม ได้รับแต้มการวิจัยหรือรับโบนัสความเร็วในการวิจัย (ชั่วคราว)\n\nเวลาคูลดาวน์: £time£ §Y720§!"
  feature_unlock_arcane_deciphering:0 "วิศวกรรมย้อนกลับศิลปวัตถุชั้นรอง"
  feature_unlock_arcane_deciphering_desc:0 "$artifact_arcane_deciphering_effect$"
  requires_arcane_deciphering_no_cooldown:0 "$TRIGGER_FAIL$§RCannot decipher more arcane technology yet.§!"
@@ -231,7 +231,7 @@
  proclaim_superiority_desc:0 "We are the future of civilization, there is nothing we can learn from the past."
  artifact_find_military_applications:0 "แสวงหาทางการทหาร"
  artifact_find_military_applications_desc:0 "Attempt to find military applications for minor artifacts."
- artifact_find_military_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various military bonuses.\n\nPerforming this will prevent you from seeking peaceful applications for a time.\n\nเวลาคูลดาวน์: £time£ §Y900§!"
+ artifact_find_military_applications_effect:1 "ทำการแยก £minor_artifacts£ศิลปวัตถุชั้นรอง เป็นหลายชิ้นเพื่อศึกษาแล้วรับโบนัสทางทหารต่างๆ\n\nการดำเนินการนี้จะป้องกันไม่ให้คุณแสวงหาหนทางสินติภาพในระยะเวลาหนึ่ง\n\nเวลาคูลดาวน์: £time£ §Y900§!"
  artifact_find_military_applications_no_cooldown:0 "$TRIGGER_FAIL$§RCannot find more peaceful or military applications yet.§!"
  artifact_find_military_application_army:0 "ยาเพื่อการสู้รบ"
  artifact_find_military_application_army_desc:0 "Your soldiers are stronger, more aggressive, and terrifying, but a bit less careful."
@@ -242,9 +242,9 @@
  artifact_find_military_application_armor_damage:0 "วิเคราะห์จุดอ่อน"
  artifact_find_military_application_armor_damage_desc:0 "Your ship weapons are able to exploit weaknesses, dealing additional damage to armor."
  artifact_find_applications_cooldown:0 "คูลดาวน์การศึกษาศิลปวัตถุชั้นรอง"
- artifact_find_peaceful_applications:0 "แสวงหาความสงบสุข"
+ artifact_find_peaceful_applications:0 "แสวงหาสันติภาพ"
  artifact_find_peaceful_applications_desc:0 "Attempt to find peaceful applications for minor artifacts."
- artifact_find_peaceful_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various civilian bonuses.\n\nPerforming this will prevent you from seeking military applications for a time.\n\nเวลาคูลดาวน์: £time£ §Y900§!"
+ artifact_find_peaceful_applications_effect:1 "ทำการแยก £minor_artifacts£ศิลปวัตถุชั้นรอง เป็นหลายชิ้นเพื่อศึกษาแล้วรับโบนัสพลเรือนต่างๆ\n\nการดำเนินการนี้จะป้องกันไม่ให้คุณแสวงหาทางทหารในระยะเวลาหนึ่ง\n\nเวลาคูลดาวน์: £time£ §Y900§!"
  artifact_find_peaceful_applications_no_cooldown:0 "$artifact_find_military_applications_no_cooldown$"
  artifact_find_peaceful_application_happy_bios:0 "ไวรัลแฟชั่นของยุคโบราณ"
  artifact_find_peaceful_application_happy_bios_desc:0 "The study of minor artifacts has unexpectedly launched a viral fad across your Empire. Everybody's doing it."
@@ -291,7 +291,7 @@
  ancrel.9001.name:0 "$artifact_irassian_research$"
  ancrel.9001.desc:0 "We have successfully managed to integrate the Irassian artifacts into our research process. Their insights into biological research will greatly aid our own."
  ancrel.9001.desc.phobe:0 "Though it clearly did not save them, the Irassians were admittedly experts in the field of biology. Our scientists have adapted what was worthwhile from their findings."
- irassian_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_irassian_research$§!"
+ irassian_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_irassian_research$§!"
  artifact_yuht_research:0 "ความลับของ Yuht"
  artifact_yuht_research_desc:0 "Delve deeper into the secrets of the Yuht."
  artifact_yuht_research_completed:0 "$artifact_yuht_research$"
@@ -304,7 +304,7 @@
  ancrel.10050.desc.1.phobe:0 "The Yuht had efficient processes for removing hostile xeno presences from their hatchery worlds. We have successfully recreated this cleansing process.\n\n$ancrel.10050.desc.2$"
  ancrel.10050.desc.2:0 "It does have some concerning short term effects on the biosphere, but once it recovers, the planet should be more suitable to our needs."
  ancrel.10050.unlock:0 "Planetary Decision Unlocked: §Y$decision_yuht_cleanseplanet$§!"
- yuht_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_yuht_research$§!\n"
+ yuht_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_yuht_research$§!\n"
  decision_yuht_cleanseplanet:0 "เริ่มกระบวนการทำความสะอาด (Yuht)"
  decision_yuht_cleanseplanet_desc:0 "Violently eradicates most hostile wildlife from a planet and - once it recovers - modifies the biosphere to better suit our needs."
  pm_yuht_cleansing:0 "Yuht Cleansing"
@@ -315,7 +315,7 @@
  VULTAUM_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Vultaum to our own."
  ancrel.10100:0 "$artifact_vultaum_research$"
  ancrel.10100.name:0 "$artifact_vultaum_research$"
- vultaum_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_vultaum_research$§!"
+ vultaum_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_vultaum_research$§!"
  ancrel.10100.desc:0 "Despite the fundamentally flawed conclusions, the Vultaum research into computing and virtual worlds was highly advanced and will dramatically aid our own studies."
  ancrel.10100.desc_machine:0 "The Vultaum appear to have accepted some fundamentally illogical concepts in their research. Their research into computing and virtual worlds had some advances that we shall incorporate into our own processes."
  ancrel.10100.desc_hive:0 "The Vultaum obsessed over the concept of reality and of virtual worlds. Most of their findings are useless to us, but at least their research into computing will aid our own."
@@ -353,7 +353,7 @@
  ancrel.10200.name:0 "$artifact_league_research$"
  ancrel.10200.desc:0 "We have successfully managed to integrate the First League artifacts into our research process. Their insights into industrial research will greatly aid our own."
  ancrel.10200.desc.phobe:0 "The First League proves that reliance on other races is folly that leads to weakness and self-destruction. Some of their advanced construction methods may, however, be of possible use."
- league_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_league_research$§!"
+ league_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_league_research$§!"
  artifact_cybrex_research:0 "ความลับของ Cybrex"
  artifact_cybrex_research_desc:0 "Delve deeper into the secrets of the Cybrex."
  artifact_cybrex_research_completed:0 "$artifact_cybrex_research$"
@@ -364,7 +364,7 @@
  ancrel.10250.name:0 "$artifact_cybrex_research$"
  ancrel.10250.desc:0 "We have successfully managed to integrate the Cybrex artifacts into our research process. Their insights into megastructure engineering will greatly aid our own."
  ancrel.10250.desc.antimachine:0 "The tale of the Cybrex is proof that our decision to outlaw artificial intelligence is a wise one.  Some of their findings related to megastructure engineering have the potential to be beneficial to our cause."
- cybrex_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_cybrex_research$§!"
+ cybrex_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_cybrex_research$§!"
  artifact_baol_research:0 "ความลับของ Baol"
  artifact_baol_research_desc:0 "Delve deeper into the secrets of the Baol."
  artifact_baol_research_completed:0 "$artifact_baol_research$"
@@ -491,7 +491,7 @@
  r_war_forge_desc:1 "A relatively small and portable war forge, the last of its kind in the universe. It is a relic from the time when the Cybrex made war upon the galaxy, before their "Adjustment" made them change their ways.\n\nThe forge's ability to produce warships has been permanently disabled by the Cybrex, but still has the capacity to convert massive amounts of minerals into alloys."
  cybrex_warform:0 "ร่างสงคราม Cybrex"
  cybrex_warform_desc:0 "This titanic robot towers over most buildings, with enough firepower to devastate cities."
- relic_cybrex_passive:0 "Permits building §Y$cybrex_warform$§! armies at your capital."
+ relic_cybrex_passive:0 "อนุญาตให้สร้างกองทัพ §Y$cybrex_warform$§! ที่ดาวศูนย์กลางจักรวรรดิคุณได้"
  relic_cybrex_active:0 "Produces £alloys£§Y5000§!."
  decision_machine_oracle:0 "Activate Oracle Nexus"
  decision_machine_oracle_desc:0 "Activates Oracle Nexus compliance software and predictive modeling to obviate drone corruption."
@@ -810,19 +810,19 @@
  sm_cybrex_mining_hub:0 "$tech_secrets_cybrex$"
  sm_cybrex_mining_hub_desc:0 "$tech_secrets_cybrex_desc$\n"
  sm_cybrex_mining_hub_desc_modifier:0 "[Root.GetCybrexMiningHubEffect]"
- cybrex_mining_hub_desc:0 "System Modifier:\nMining Station Output: §G+100%§!"
- improved_cybrex_mining_hub_desc:0 "System Modifier:\nMining Station Output: §G+150%§!"
+ cybrex_mining_hub_desc:0 "ความเปลี่ยนแปลงของระบบ:\nผลผลิตของสถานีขุดแร่: §G+100%§!"
+ improved_cybrex_mining_hub_desc:0 "ความเปลี่ยนแปลงของระบบ:\nผลผลิตของสถานีขุดแร่: §G+150%§!"
  sm_irassian_naval_yards:0 "$tech_secrets_irassian$"
  sm_irassian_naval_yards_desc:0 "$tech_secrets_irassian_desc$\n"
  requires_shipyard:0 "§RRequires §Y$sm_shipyard$§!.§!"
  sm_irassian_naval_yards_desc_modifier:0 "[Root.GetIrassianNavalYardsEffect]"
- irassian_naval_yards_desc:0 "Shipyards: §G+1§! §YShipyard Capacity§!\nStarbase Modifier:\nShip Build Speed: §G+20%§!"
- improved_irassian_naval_yards_desc:0 "Shipyards: §G+1§! §YShipyard Capacity§!\nStarbase Modifier:\nShip Build Speed: §G+30%§!"
+ irassian_naval_yards_desc:0 "อู่ต่อยาน: §G+1§! §Yความจุอู่ต่อยาน§!\nการปรับเปลี่ยนของฐานอวกาศ:\nความเร็วในการสร้างยาน: §G+20%§!"
+ improved_irassian_naval_yards_desc:0 "อู่ต่อยาน: §G+1§! §Yความจุอู่ต่อยาน§!\nการปรับเปลี่ยนของฐานอวกาศ:\nความเร็วในการสร้างยาน: §G+30%§!"
  sm_yuht_detection_array:0 "$tech_secrets_yuht$"
  sm_yuht_detection_array_desc:0 "$tech_secrets_yuht_desc$\n"
  sm_yuht_detection_array_desc_modifier:0 "[Root.GetYuhtDetectionArrayEffect]"
- yuht_detection_array_desc:0 "Starbase Modifier:\nSensor Range: §G+7§!\nShip Hyperlane Detection Range: §G+14§!"
- improved_yuht_detection_array_desc:0 "Starbase Modifier:\nSensor Range: §G+10§!\nShip Hyperlane Detection Range: §G+20§!"
+ yuht_detection_array_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nระยะของเซ็นเซอร์: §G+7§!\nระยะในการตรวจพบไฮเปอร์เลนของยาน: §G+14§!"
+ improved_yuht_detection_array_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nระยะของเซ็นเซอร์: §G+10§!\nระยะในการตรวจพบไฮเปอร์เลนของยาน: §G+20§!"
  sm_zroni_storm_caster:0 "$tech_secrets_zroni$"
  sm_zroni_storm_caster_desc:0 "The Storm Caster is not quite Zroni Technology. We simply realized that exposing zro to extreme conditions could cause it to release its potential energy in an erratic manner, leading to all sorts of dangerous interferences and phenomenon. After a series of insightful incidents, we have discovered a way to harness this energy through Zroni-made crystals to produce a powerful psychic storm in a solar system.\n"
  sm_zroni_storm_caster_desc_modifier:0 "[Root.GetZroniStormCasterEffect]"
@@ -835,13 +835,13 @@
  sm_archaeo_rampart:0 "$tech_archaeo_rampart$"
  sm_archaeo_rampart_desc:0 "$tech_archaeo_rampart_desc$\n"
  sm_archaeo_rampart_desc_modifier:0 "[Root.GetArchaeoRampartEffect]"
- archaeo_rampart_desc:0 "Starbase Modifier:\nShip Hull Points: §G+15%§!\nArmor Hit Points: §G+15%§!\nDefense Platforms Cap: §G+2§!"
- improved_archaeo_rampart_desc:0 "Starbase Modifier:\nShip Hull Points: §G+15%§!\nArmor Hit Points: §G+20%§!\nArmor Hardening: §G+10%§!\nDefense Platforms Cap: §G+2§!"
+ archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP ยาน: §G+15%§!\nHP เกราะ: §G+15%§!\nจำนวนสูงสุดของแพลตฟอร์มป้องกัน: §G+2§!"
+ improved_archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP ยาน: §G+15%§!\nHP เกราะ: §G+20%§!\nเสริมความแข็งแกร่งเกราะ: §G+10%§!\nจำนวนสูงสุดของแพลตฟอร์มป้องกัน: §G+2§!"
  sm_archaeo_overcharger:0 "$tech_archaeo_overcharger$"
  sm_archaeo_overcharger_desc:0 "$tech_archaeo_overcharger_desc$\n"
  sm_archaeo_overcharger_desc_modifier:0 "[Root.GetArchaeoOverchargerEffect]"
- archaeo_overcharger_desc:0 "Starbase Modifier:\nShield Hit Point: §G+33%§!\nShield Hardening: §G+33%§!\nDefense Platform Modifier:\nShield Hit Points: §G+25%§!\nShield Hardening: §G+25%§!"
- improved_archaeo_overcharger_desc:0 "Starbase Modifier:\nShield Hit Point: §G+50%§!\nShield Hardening: §G+50%§!\nDefense Platform Modifier:\nShield Hit Points: §G+25%§!\nShield Hardening: §G+25%§!"
+ archaeo_overcharger_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP โล่พลังงาน: §G+33%§!\nเสริมความแข็งแกร่งโล่พลังงาน: §G+33%§!\nการปรับเปลี่ยนของแพลตฟอร์มป้องกัน:\nHP โล่พลังงาน: §G+25%§!\nเสริมความแข็งแกร่งโล่พลังงาน: §G+25%§!"
+ improved_archaeo_overcharger_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP โล่พลังงาน: §G+50%§!\nเสริมความแข็งแกร่งโล่พลังงาน: §G+50%§!\nการปรับเปลี่ยนของแพลตฟอร์มป้องกัน:\nHP โล่พลังงาน: §G+25%§!\nเสริมความแข็งแกร่งโล่พลังงาน: §G+25%§!"
  building_archaeo_refinery:0 "$tech_archaeo_refinery$"
  building_archaeo_refinery_desc:0 "$tech_archaeo_refinery_desc$"
  job_archaeoengineers:1 "วิศวกรโบราณคดี"
