--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -80,7 +80,7 @@
  concept_habitat_1: "$tech_habitat_1$"
  concept_habitat_1_desc: "- §Iปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! $habitat_central_complex$\n- $i_unlocks_orbital$ $major_orbital_plural$\n- $i_unlocks_orbital$ $minor_orbital_plural$\n\n§L$tech_habitat_1_desc$§!"
  concept_habitat_2: "$tech_habitat_2$"
- concept_habitat_2_desc: "§Iปลดล็อกการตัดสินใจของดาวเคราะห์§!: $decision_upgrade_habitat$\n\n§L$tech_habitat_2_desc$§!"
+ concept_habitat_2_desc:1 "§Iปลดล็อกสิ่งปลูกสร้าง§!: $building_hab_major_capital$\n\n§L$tech_habitat_2_desc$§!"
  concept_scion: "$preset_scion$"
  concept_scion_desc: "$preset_scion_desc$"
  concept_tree_of_life: "$d_tree_of_life_home$"
@@ -104,7 +104,7 @@
  concept_consume_world: "$decision_lithoid_swarm_consume_world$"
  concept_consume_world_desc: "§L$decision_lithoid_swarm_consume_world_desc$§!"
  concept_massive_crater: "$d_lithoid_crater$"
- concept_massive_crater_desc: "- ผลของ ['concept_lithoid_traits']: §G+50%§!\n- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+6§!\n- $mod_district_mining_max$: §G+6§!\n- $mod_district_farming_max$: §R-6§!\n- การอยู่อาศัยได้ของประชากรที่ไม่ใช่ Lithoid: §R-50%§!\n- $MOD_POP_GROWTH_SPEED$: §G+25%§!\n\n§L$d_lithoid_crater_desc$§!"
+ concept_massive_crater_desc: "- ผลของ ['concept_lithoid_traits']: §G+50%§!\n- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+6§!\n- $mod_district_mining_max$: §G+6§!\n- $mod_district_farming_max$: §R-6§!\n- $MOD_POP_GROWTH_SPEED$: §G+25%§!\n\n§L$d_lithoid_crater_desc$§!"
  concept_buried_lithoids: "$d_buried_lithoids$"
  concept_buried_lithoids_desc: "- เวลาในการเคลียร์: £time£ 360 §Iวัน§!\n- ค่าใช้จ่ายในการเคลียร์: $i_minerals$ 1000\n- ในระหว่างทำการเคลียร์: £pop£ §Iประชากร§! §ILithoid§! §G+1§!\n\n§L$d_buried_lithoids_desc$§!"
  concept_lithoid_crater: "$lithoid_crater$"
@@ -236,7 +236,7 @@
  concept_hydroponics_farm: "$building_hydroponics_farm$"
  concept_hydroponics_farm_desc: "- £mod_job_farmer_add£ งาน $job_farmer$: §G+2§!\n\n§L$building_hydroponics_farm_desc$§!"
  concept_noble: "$job_noble_plural$"
- concept_noble_desc: "£job_noble£ $job_noble_plural$ turn $i_consumer_goods$ into ['concept_unity', £unity£ $concept_unity$], $i_amenities$ and $i_stability$.\n\n§L$job_noble_desc$§!"
+ concept_noble_desc: "£job_noble£ $job_noble_plural$ เปลี่ยน $i_consumer_goods$ เป็น ['concept_unity', £unity£ $concept_unity$], $i_amenities$ และ $i_stability$\n\n§L$job_noble_desc$§!"
  concept_noble_estates: "$building_noble_estates$"
  concept_noble_estates_desc: "£mod_planet_housing_add£ $MOD_PLANET_HOUSING_ADD$: §G+1§!\n£mod_job_noble_add£ $mod_job_noble_add$: §G+1§!\n\n§L$building_noble_estates_desc$§!"
  concept_noble_vacation_homes: "$holding_noble_vacation_homes$"
