--- a/mod/thmod/localisation/english/concepts_l_english.yml
+++ b/mod/thmod/localisation/english/concepts_l_english.yml
@@ -37,7 +37,7 @@
  concept_society_research:0 "การวิจัยสังคม"
  concept_society_research_desc:0 "การวิจัยสังคมเป็นหนึ่งในสามสาขาของการศึกษาที่มีสาขาต่างๆ §Iชีววิทยา§!, §Iการปกครอง§!, และ §Iพลังจิต§!"
  concept_engineering_research:0 "การวิจัยวิศวกรรม"
- concept_engineering_research_desc:0 "การวิจัยวิศวกรรมเป็นหนึ่งในสามสาขาของการศึกษาที่มีสาขาต่างๆ §Iอุตสาหกรรม§!, §Iแรงขับดัน§!, และ §Iยานอวกาศ§!"
+ concept_engineering_research_desc:0 "การวิจัยวิศวกรรมเป็นหนึ่งในสามสาขาของการศึกษาที่มีสาขาต่างๆ §Iอุตสาหกรรม§!, §Iระบบขับเคลื่อน§!, และ §Iยานอวกาศ§!"
  concept_preftl_civilizations:0 "อารยธรรม Pre-FTL"
  concept_preftl_civilizations_desc:0 "อารยธรรมพรี-เอฟทีแอลเป็นอารยธรรมที่ยังไม่ประสบความสำเร็จในการเดินทางในอวกาศที่เร็วกว่าแสง พวกเขามีเทคโนโลยีในช่วงตั้งแต่ยุคหินไปจนถึงยุคอวกาศตอนต้นและโดยทั่วไปไม่รู้ว่ามีสิ่งมีชีวิตต่างดาวอยู่"
  concept_presapient_species:0 "เผ่าพันธุ์ พรี-เซเปียนส์"
