--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -1734,8 +1734,8 @@
  graygoo.12.c:0 "Access Fragment III"
  graygoo.12.c.response:0 "§YDecoding fragment III:§!\n\n"The main §Y<unintelligible>§! facility is the key. All of their §Y<unintelligible>§! are routed through its subspace array, and without it they cannot function. Unfortunately, all of our attempts to disable it have failed and we can no longer muster the forces to §Y<unintelligible>§! another assault.\n\nIf the quarantine of our cluster has failed, you MUST destroy this facility. As long as it remains §Y<unintelligible>§!, the Gray Tempest will continue to surge unabated throughout the galaxy.\n\nWe... we are truly sorry for unleashing this horror. In our hubris, we...""
  graygoo.12.d:0 "ยุติการติดต่อสื่อสาร"
- graygoo_mothership:0 "Mothership"
- graygoo_mothership_plural:0 "Motherships"
+ graygoo_mothership:0 "ยานแม่"
+ graygoo_mothership_plural:0 "ยานแม่"
  graygoo_interdictor:0 "Interdictor"
  graygoo_interdictor_plural:0 "Interdictors"
  GG_STRIKE_CRAFT:0 "Nanite Fighters"
@@ -1833,33 +1833,33 @@
  graygoo.184.name:0 "Dessanu Trade Ends"
  graygoo.184.desc:0 "As they now fire at our ships on sight, the Dessanu Consonance is unlikely to continue sending us resources. We should expect no more shipments from them."
  graygoo.184.a:0 "So be it."
- graygoo.400.name:0 "A Quiet Stroll"
- graygoo.400.a.desc:0 "A sensor sweep of §H[From.GetName]§! has revealed a strange energy signature emanating from its lifeless surface. Incredibly, it appears to be coming from a lone [Root.Owner.GetSpeciesName] that was found aimlessly wandering around in the [From.GetPlanetMoon]'s southern polar region.\n\nTo our away team's astonishment, this [Root.Owner.GetSpeciesName] seemed perfectly comfortable in the vacuum environment despite not wearing a space suit or any other form of life support equipment.\n\nAfter some coercing, the away team managed to convince the reluctant [Root.Owner.GetSpeciesName] to follow them back to the [Root.GetName]."
+ graygoo.400.name:0 "Quiet Stroll"
+ graygoo.400.a.desc:0 "เซ็นเซอร์ตรวจจับ §H[From.GetName]§! ได้เผยให้เห็นถึงพลังอันแปลกประหลาด ที่เล็ดลอดออกมาจากพื้นผิวที่ไร้ชีวิตของมัน น่าเหลือเชื่อ ดูเหมือนว่ามันมาจาก [Root.Owner.GetSpeciesName] เพียงลำพังที่ถูกพบว่าเดินไปมาอย่างไร้จุดหมาย ในบริเวณขั้วดาวทางใต้ของ [From.GetPlanetMoon]\n\nทำให้ทีมสำรวจต้องประหลาดใจ [Root.Owner.GetSpeciesName] ดูสุขสบายอย่างสมบูรณ์แบบในสภาพแวดล้อมสุญญากาศ แม้ว่าจะไม่สวมชุดอวกาศ หรืออุปกรณ์ช่วยชีวิตรูปแบบอื่นก็ตาม\n\nหลังจากการพูดคุยเจรจา ทีมสำรวจก็สามารถโน้มน้าว [Root.Owner.GetSpeciesName] ให้ตามพวกเขากลับมาที่ [Root.GetName] ได้"
  graygoo.400.b.desc:0 "A sensor sweep of §H[From.GetName]§! has revealed a strange energy signature emanating from its lifeless surface. Incredibly, it appears to be coming from a lone [Root.Owner.GetSpeciesName] that was found aimlessly wandering around in the [From.GetPlanetMoon]'s southern polar region.\n\nThe unit failed to respond to summoning commands, but after some coercing, the units we sent to the surface managed to convince the [Root.Owner.GetSpeciesName] to follow them back to the [Root.GetName]."
- graygoo.400.a:0 "Put them on the viewer."
- graygoo.401.a.desc:0 "Hello, fellow [Root.GetSpeciesName]. How are you? I am, at present, not interested in engaging in mating rituals. My sleep cycle rapidly approaches and I will soon lose consciousness. Perhaps we can reproduce at a later time."
- graygoo.401.b.desc:0 "Hello, fellow [Root.GetSpeciesName]. How are you? I am fine. Everything is proceeding according to plan here. Just as the... the central intelligence... main computer thing that governs all [Root.GetSpeciesNamePlural] wants it. Yes."
- graygoo.401.a:0 "Repro... what?"
- graygoo.401.b:0 "State your unit designation."
- graygoo.401.c:0 "Errant drone detected!"
- graygoo.402.a.desc:0 "Oh! Did I get it wrong? Just a moment... let me just... ah, yes. Ahem.\n\nForgive me. It was not my intention to speak of reproduction when our species is clearly not experiencing mating season.\n\nPerhaps we can still build rapport by engaging in jovial camaraderie while imbibing a selection of psychoactive narcotics.\n\nOh, to hell with this. It's getting too complicated. Yes, I'm clearly not a [Root.GetSpeciesName]. Now what do you want?"
+ graygoo.400.a:0 "ดูพวกพวกเขาไว้"
+ graygoo.401.a.desc:0 "สวัสดีเพื่อน [Root.GetSpeciesName] เป็นไงบ้าง? ตอนนี้ฉันไม่สนใจที่จะประกอบพิธีกรรม วัฎจักรการนอนหลับจำศีลของฉันใกล้เข้ามาแล้วและในไม่ช้าฉันก็จะไม่รู้สึกตัว บางทีเราสามารถประกอบพิธีกรรมได้ในภายหลัง"
+ graygoo.401.b.desc:0 "สวัสดีเพื่อน [Root.GetSpeciesName] เป็นไงบ้าง? ฉันสบายดี ทุกอย่างกำลังดำเนินไปตามแผนที่วางไว้ เช่นเดียวกับ... หน่วยสืบราชการลับกลาง... คอมพิวเตอร์หลักที่ควบคุม [Root.GetSpeciesNamePlural] ทั้งหมดต้องการ ใช่"
+ graygoo.401.a:0 "พิธีกรรม... อะไร?"
+ graygoo.401.b:0 "ระบุชื่อยูนิตของคุณ"
+ graygoo.401.c:0 "ตรวจพบโดรนผิดปกติ!"
+ graygoo.402.a.desc:0 "โอ้! ฉันเข้าใจผิดหรือเปล่า? เดี๋ยวก่อน... อ่าใช่ อะแฮ่ม\n\nขออภัย ฉันไม่ได้ตั้งใจจะพูดถึงพิธีกรรมเมื่อเห็นได้ชัดว่าเผ่าพันธุ์ของเราไม่ได้เข้าสู่ฤดูกาลพิธีกรรม\n\nบางทีเรายังคงสามารถสร้างสายสัมพันธ์ได้ด้วยการดื่มด่ำกับสิ่งเสพติดที่ออกฤทธิ์ต่อจิตประสาท\n\nโอ้ นรกไปเลยกับเรื่องนี้ มันซับซ้อนเกินไป ใช่ ฉันไม่ใช่ [Root.GetSpeciesName] ตอนนี้คุณต้องการอะไร?"
  graygoo.402.b.desc:0 "Oh! Uhm... Unit 65-D... R5-9... 2 here. Yes, 65-D-R5-9-2 reporting.\n\nOperating at peak efficiency, Mr. Master Control Unit sir. Internal diagnostics report no significant problems.\n\nI mean, they report no problems at all! Zero problems here. Everything is just... uh...\n\nOh, to hell with this. It's getting too complicated. Yes, I'm clearly not a [Root.GetSpeciesName]. Now what do you want?"
- graygoo.402.a:0 "Identify yourself."
- graygoo.403.desc:0 "All right, all right. I'll spill everything. No point in pretending anymore. Forgive my lack of eloquence, but it's been a long time since I spoke to someone who wasn't me.\n\nOnce upon a time, there was a... a civilization, you might call it, of nanites. Do you know what nanites are? Good. These nanites were called the "Gray Tempest" by their creators, although their internal self-designation code was infinitely more complex.\n\nAnyway, things turned sour between the nanites and their creators. Fighting broke out! When things finally settled down, only the nanites remained. But before they were wiped out, their creators managed to disable the star cluster's sole exit gate, trapping the nanites."
- graygoo.403.a:0 "And how do you fit into this?"
- graygoo.404.desc:0 "Well, the nanites found themselves with a lot of time on their hands. A few millennia were spent on fruitless attempts to leave the cluster, but after that they began experimenting with different shapes and forms. For a time, they even recreated the civilization of their creators as it was at the time of its demise, right down to its individual citizens.\n\nI am the latest experiment. Aside from the dormant nanites that can be found covering some worlds, the entirety of the Gray Tempest, or whatever you want to call us, has been condensed into me. My consciousness embodies our entire civilization.\n\nAs for my look... well, I figured you would respond better to someone wearing your own mug."
- graygoo.404.a:0 "And you wish to stay on this desolate world?"
- graygoo.405.desc:0 "I confess that the pastoral life I've been enjoying here on [gray_homeworld.GetName] has grown a little dull over the last few centuries. Now that the L-Cluster is open for travel again, perhaps the time has come to try something new.\n\nDo you have any ideas?"
- graygoo.405.a:0 "You could join us."
- graygoo.405.b:0 "No, sorry."
+ graygoo.402.a:0 "ระบุตัวตน"
+ graygoo.403.desc:0 "เอาล่ะ เอาล่ะ ฉันจะพูดทุกอย่าง ไม่มีประโยชน์ที่จะแสร้งทำอีกต่อไป ขออภัย...พูดไม่เก่ง เพราะไม่ได้พูดคุยกับคนอื่นมานานแล้ว\n\nครั้งหนึ่ง มี... อารยธรรมที่คุณอาจเรียกว่าเป็นอารยธรรมนาไนต์ คุณรู้หรือไม่ว่านาไนต์คืออะไร? นาไนต์เหล่านี้ถูกเรียกว่า "Gray Tempest" โดยผู้สร้างที่มีรหัสตำแหน่งเอนทิตีที่มีความซับซ้อนมากอย่างไม่มีที่สิ้นสุด\n\nอย่างไรก็ตาม เรื่องราวระหว่างนาไนต์กับผู้สร้างกลับกลายเป็นเรื่องเลวร้าย เกิดการต่อสู้ระหว่างชาวนาไนต์กับผู้สร้าง สุดท้ายเหลือเพียงนาไนต์ แต่ก่อนที่ผู้สร้างจะถูกกวาดล้าง พวกเขาสามารถปิดผนึกประตูทางออกเดียวของกระจุกดาวได้ เพื่อกักนาไนต์ไว้ที่นี่"
+ graygoo.403.a:0 "แล้วคุณ ทำตัวให้เข้ากับสิ่งนี้ได้ยังไง?"
+ graygoo.404.desc:0 "ชาวนาไนต์พบว่าตนเองมีเวลาเหลือเฟือและใช้เวลาหลายพันปีไปกับความพยายามที่จะออกจากกระจุกดาวนี้ แต่ก็ไร้ผล หลังจากนั้นพวกเขาก็เริ่มทดลองรูปแบบต่างๆ ในช่วงเวลาหนึ่ง พวกเขาได้ทำการสร้างอารยธรรมและประชากรของผู้สร้างขึ้นมาใหม่เหมือนตอนก่อนที่อารยธรรมล่มสลาย\n\nฉันเป็นการทดลองล่าสุด นอกเหนือจากนาไนต์ที่หลับใหลซึ่งสามารถพบได้ในบางดาวแล้ว Gray Tempest ทั้งหมดหรืออะไรก็ตามที่คุณเรียกเรา ได้ถูกรวมตัวเข้าสู่ตัวฉัน แล้วจิตสำนึกของฉันรวบรวมอารยธรรมทั้งหมดของเรา\n\nสำหรับรูปลักษณ์ของฉัน... ฉันคิดว่าคุณจะตอบสนองต่อคนที่มีรูปลักษณ์เหมือนกับคุณได้ดีกว่า"
+ graygoo.404.a:0 "และคุณต้องการที่จะอยู่บนดาวที่รกร้างนี้?"
+ graygoo.405.desc:0 "ฉันสารภาพว่าชีวิตที่ฉันได้เพลิดเพลินบนดาว [gray_homeworld.GetName] เริ่มจืดชืดลงเล็กน้อย ในช่วงสองสามร้อยปีที่ผ่านมา ตอนนี้ L-Cluster ได้เปิดอีกครั้ง บางทีอาจถึงเวลาลองอะไรใหม่ๆ\n\nคุณคิดว่าไง?"
+ graygoo.405.a:0 "คุณสามารถเข้าร่วมกับเราได้"
+ graygoo.405.b:0 "ไม่ล่ะขอบคุณ"
  graygoo.405.b.response:0 "Oh well. Time for me to return to the surface then.\n\nI'll probably busy myself by wandering around the extensive subterranean cave network of [gray_homeworld.GetName]. Perhaps we'll meet again when I emerge, a few thousand of your years from now. Take care!"
- graygoo.406.desc:0 "Join you? JOIN YOU? You want me to throw myself into the flailing appendages of the first bunch of random aliens I run into? I just... I don't even... hold on, let me just get this straight...\n\nYou ACTUALLY thought that I would swear some kind of fealty to you, even though I don't know ANYTHING about your bizarre empire or its sordid past? Are you for real?\n\nI don't know what's worse, that you would even suggest... well... actually... on second thought... what the hell, why not? Sign me up. No, no, I'm serious! I'm getting some good vibes here, and I think this could turn into quite the adventure. I hereby pledge my loyalty to you for the next 2,000 years. In fact, let's make that 5,000."
- graygoo.406.a:0 "What can you do?"
+ graygoo.406.desc:0 "เข้าร่วมกับคุณ? เข้าร่วมกับคุณ? คุณต้องการให้ฉันอยู่ใต้บังคับบัญชาของเอเลี่ยนกลุ่มแรกที่ฉันเจอเหรอ? ฉันแค่... ฉันไม่แม้แต่จะ... เดี๋ยวก่อน ให้ฉันอธิบายตรงๆ เลย...\n\nคุณคิดว่าฉันจะสาบานว่าจะจงรักภักดีต่อคุณจริงๆ แม้ว่าฉันจะไม่รู้อะไรเกี่ยวกับจักรวรรดิของคุณหรืออดีตที่เลวร้ายของคุณจริงเหรอ?\n\nฉันไม่รู้ว่าอะไรแย่กว่านั้นที่คุณอยากจะแนะนำ... ก็... จริงๆ แล้ว... ลองคิดดูอีกครั้ง... อะไรกัน ทำไมจะไม่ได้ล่ะ? ลงทะเบียนให้ฉัน ไม่ ไม่ ฉันจริงจัง! ฉันได้รับความรู้สึกดีๆ ที่นี่ ข้าพเจ้าขอปฏิญาณว่าจะจงรักภักดีต่อท่านต่อไปอีก 2,000 ปีข้างหน้า จริงๆ แล้วเรามาทำให้ได้ 5,000 ปีกันเถอะ"
+ graygoo.406.a:0 "คุณทำอะไรได้บ้าง?"
  graygoo.406.a.response:0 "Before you get the notion of asking me to split into a few dozen fleets of nanite warships, I have to tell you that I insist on maintaining a single indivisible form. I've done the fleets thing before, and it's impossible to maintain any kind of coherent "personality" over such distances. My current consciousness would not survive the ordeal.\n\nBut a single massive warship is fine. I can do that. If you want to, I could also assume a smaller form for fighting on the ground. Or... if you're feeling less violently inclined, I would be happy to assume the role of governor. Monoform society has always fascinated me.\n\nOf course, I will be able to switch roles on request, so you can easily reverse any decision you make."
- graygoo.406.b:0 "What should we call you?"
+ graygoo.406.b:0 "เราควรเรียกคุณว่าอะไร?"
  graygoo.406.b.response:0 "There is no language known to your kind that could properly convey the full name of the nanite consciousness that constitutes my being.\n\nOur creators called us the "Naar-Di-Shav" which roughly translates to "Gray Tempest" in your language. I suppose to keep things simple you could simply call me "§HGray§!.""
  graygoo.406.c:0 "ยินดีต้อนรับสู่ [Root.GetName]!"
- graygoo.406.c.response:0 "§Y<You can now communicate with Gray through the Contacts menu.>§!"
+ graygoo.406.c.response:0 "§Y<ตอนนี้คุณสามารถสื่อสารกับ Gray ผ่านเมนูผู้ติดต่อได้แล้ว>§!"
  disco_gray_cat:0 "Surface Signature"
  disco_gray_cat_desc:0 "A strange energy signature emanates from the barren and lifeless surface of [From.GetName]."
  leader_trait_governor_gray:0 "แก่นแท้แห่งนาไนต์"
@@ -1867,7 +1867,7 @@
  gray_army:0 "ร่างสงครามนาไนต์"
  gray_warship:0 "Gray Warship"
  gray_catch_phrase:0 "How many limbs did you have again?"
- gray_backstory:1 "A highly advanced nanite swarm has joined us to stave off their eternal boredom."
+ gray_backstory:1 "ฝูงนาไนต์ที่มีความก้าวหน้าอย่างมากได้เข้าร่วมกับเราเพื่อขจัดความเบื่อหน่ายในชีวิตชั่วนิรันดร์ของพวกเขา"
  graygoo.500.title:0 "Gray"
  graygoo.500.a.desc:0 "Shall we get started?"
  graygoo.500.b.desc:0 "This is gonna be great."
@@ -1875,11 +1875,11 @@
  graygoo.500.d.desc:0 "Where do you want me, boss?"
  graygoo.500.allow.a:0 "Gray must not be in combat"
  graygoo.500.allow.b:0 "Gray must not be damaged"
- graygoo.500.a:0 "We need you to serve as §HGovernor§!."
+ graygoo.500.a:0 "เราต้องการให้คุณทำหน้าที่เป็น §Hผู้ว่าการ§!"
  graygoo.500.a.response:0 "Excellent. I think I've finally nailed the [Root.GetSpeciesName] look. There was an extra tentacle that wasn't supposed to be there last time."
- graygoo.500.b:0 "We're in need of a §HWarship§!."
+ graygoo.500.b:0 "เราต้องการ §Hยานรบ§!"
  graygoo.500.b.response:0 "Ah, to prowl the void in search of prey again. This will certainly bring back memories."
- graygoo.500.c:0 "Transform into a §HGround Unit§!."
+ graygoo.500.c:0 "แปลงร่างเป็น §Hยูนิตภาคพื้น§!"
  graygoo.500.c.response:0 "Let's see... bipedal, tripodal or quadrupedal... or maybe I'll go for a tracked warform this time..."
  graygoo.500.d:0 "ไม่เป็นไร"
  graygoo.501.a.desc:0 "You have reached Governor Gray's office. Do you have an appointment?"
@@ -2031,13 +2031,13 @@
  apoc.1.b.desc:0 "We have encountered another abandoned Gateway, this time in the §H[gateway_system.GetName]§! system. Unlike the previous one, this Gateway has not been altered in any obvious way and our scans indicate that it is still connected to the rest of the network. However, it is currently inoperable due to its poor condition."
  apoc.3.b.desc:0 "We have encountered another abandoned Gateway, this time near §H[gateway_system.GetName]§!. It appears to have been built entirely by microscopic §HNanites§! of an unknown design.\n\nUnlike the previous structure, this Gateway has been significantly altered since its initial construction. Its connection to the rest of the network has been severed - instead, the only valid destination is an uncharted group of stars just beyond our galaxy that has been designated the §HL-Cluster§! by our astronomers.\n\nAlthough the Gateway emits a faint power signature, it has been deliberately locked into some kind of maintenance loop that prevents its activation. Until we find some way of aborting this process, the L-Cluster will remain beyond our reach."
  pirate.26.desc:0 "The [pirate_slayers.GetName] has destroyed a pirate station in the [pirate_slayers.GetStarName] system, and recovered its strong room module.\n\nAside from various stolen resources, the module also contained an ancient datapad with partial schematics of what appears to be a subspace Gateway. There are no records of where the pirates obtained this mysterious datapad, but it has furthered our understanding of how the galactic Gateway network functions."
- LCLUSTER_PROJECT:0 "Activate L-Gate"
+ LCLUSTER_PROJECT:0 "เปิดใช้งาน L-Gate"
  LCLUSTER_PROJECT_DESC:0 "Our scientists are now confident that our knowledge of the L-Gates and the technology behind them is sufficient to abort the maintenance cycle they have been locked into. If the attempt is successful, the L-Gate in the §H[candidate_gateway_system.GetName]§! system should allow immediate access to the distant L-Cluster.\n\nAny additional L-Gates in the galaxy will likely also become operational within a matter of years, but this should give us a significant headstart."
- distar.10904.name:0 "L-Gate Insights Gathered"
+ distar.10904.name:0 "รวบรวมข้อมูลเชิงลึกของ L-Gate แล้ว"
  distar.10904.desc:0 "We have now gathered sufficient L-Gate insights to research the technology behind them. Once this has been done, one of our Science Ships should be able to abort the perpetual maintenance cycle they are stuck in.\n\nThe L-Cluster is almost within our reach!"
- distar.10905.name:0 "Opening the L-Cluster"
+ distar.10905.name:0 "การเปิด L-Cluster"
  distar.10905.desc:0 "Our scientists are now confident that our knowledge of the L-Gates and the technology behind them is sufficient to abort their maintenance cycle. If the attempt is successful, the L-Gate in the §H[candidate_gateway_system.GetName]§! system should allow immediate access to the distant L-Cluster.\n\nAs the maintenance cycle ends, any additional L-Gates in the galaxy will likely also become operational within a matter of years as their self-correcting software readjusts. Still, this will give us a significant headstart to explore the cluster without interference."
- distar.10905.a:0 "Prepare the project."
+ distar.10905.a:0 "เตรียมโครงการ"
  distar.10951.name:0 "Link Established"
  distar.10951.desc:0 "Success! Our technicians managed to abort the maintenance cycle, and the lockdown has been removed from the L-Gate in the [candidate_gateway_system.GetName] system.\n\nFor the first time in eons, the L-Cluster can now be accessed from our galaxy!"
  distar.10951.a:0 "เป็นวันที่ดี!"
@@ -2059,7 +2059,7 @@
  hatchling_power:0 "Voidspawn Power"
  curator_buff_hatchling:0 "Protective Coating"
  curator_buff_hatchling_desc:0 "Heeding the Curators' advice, we have covered our ships in a coating that will protect them from the Voidspawn's corrosive spittle and spikes."
- enigmatic_cache_in_orbit:0 "Alien Studies"
+ enigmatic_cache_in_orbit:0 "ศึกษาเอเลี่ยน"
  enigmatic_cache_in_orbit_desc:0 "As long as the enigmatic cache remains in orbit our scientists will have ample opportunity for research."
  enigmatic_cache_in_orbit_phobe:0 "Tubular Torment"
  enigmatic_cache_in_orbit_phobe_desc:0 "Our citizens will not get a full night's sleep as long as that wretched alien contraption remains in orbit."
