--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -978,9 +978,18 @@
  decision_upgrade_habitat_2_effects_short:1 "$decision_upgrade_habitat_effects$"
  decision_upgrade_habitat_2_desc:0 "$tech_habitat_3_desc$"
  max_one_orbital_per_system: "$TRIGGER_FAIL$§RWe can only build one Orbital of this type per system§!"
- d_system_resources: "ทรัพยากรในวงโคจรดาว"
- d_system_resources_desc: "Construction of Orbitals around major and minor celestial bodies throughout the system feeds the resource requirements of this growing Orbital Complex."
+ d_system_resources:1 "ความจุของสถานีโคจร"
+ d_system_resources_desc:1 "The construction of orbitals around celestial bodies throughout the system provides additional living and working space for the Orbital Complex."
  system_resources_tooltip: "ระบบดาว §Y[solar_system.GetName]§! สามารถรองรับ: $TABBED_NEW_LINE$ สถานีที่อยู่อาศัยโคจรดาว(หลัก): §Y[solar_system.GetNumMajorOrbitals]/[solar_system.GetMaxMajorOrbitals]§! $TABBED_NEW_LINE$ สถานีที่อยู่อาศัยโคจรดาว(รอง): §Y[solar_system.GetNumMinorOrbitals]/[solar_system.GetMaxMinorOrbitals]§!\n\nสถานีวงโคจรในปัจจุบันให้:"
+ d_orbital_research: "$major_orbital_science_plural$"
+ d_orbital_research_desc: "$district_hab_science_desc$"
+ d_orbital_research_tt: "ระบบดาว §Y[solar_system.GetName]§! สามารถรองรับ:  $TABBED_NEW_LINE$$major_orbital_science_plural$: §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!\n\nสถานีวงโคจรในปัจจุบันให้:"
+ d_orbital_energy: "$major_orbital_energy_plural$"
+ d_orbital_energy_desc: "$district_hab_energy_desc$"
+ d_orbital_energy_tt: "ระบบดาว §Y[solar_system.GetName]§! สามารถรองรับ:  $TABBED_NEW_LINE$$major_orbital_energy_plural$: §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!\n\nสถานีวงโคจรในปัจจุบันให้:"
+ d_orbital_mining: "$major_orbital_mining_plural$"
+ d_orbital_mining_desc: "$district_hab_mining_desc$"
+ d_orbital_mining_tt: "ระบบดาว §Y[solar_system.GetName]§! สามารถรองรับ:  $TABBED_NEW_LINE$$major_orbital_mining_plural$: §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\nสถานีวงโคจรในปัจจุบันให้:"
  d_ruined_major_orbital: "Ruined Major Orbital"
  d_ruined_major_orbital_desc: "This orbital has experienced a catastrophic hull failure. Repairs must be done before habitation functions can be resumed."
  d_ruined_minor_orbital: "Ruined Minor Orbital"
@@ -1039,17 +1048,17 @@
  major_orbital_mining_plural: "สถานีทำเหมืองแร่อวกาศ (โคจร)"
  minor_orbital_mining: "$major_orbital_mining$"
  minor_orbital_mining_plural: "$major_orbital_mining_plural$"
- num_mining_orbitals: "\nCurrent $major_orbital_mining_plural$: §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!"
+ num_mining_orbitals: "\nปัจจุบัน $major_orbital_mining_plural$: §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!"
  major_orbital_science: "Zero-G Research Orbital"
  major_orbital_science_plural: "สถานีวิจัย Zero-G (โคจร)"
  minor_orbital_science: "$major_orbital_science$"
  minor_orbital_science_plural: "$major_orbital_science_plural$"
- num_science_orbitals: "\nCurrent $major_orbital_science_plural$: §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!"
+ num_science_orbitals: "\nปัจจุบัน $major_orbital_science_plural$: §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!"
  major_orbital_energy: "Reactor Orbital"
  major_orbital_energy_plural: "สถานีเครื่องปฏิกรณ์โคจร"
  minor_orbital_energy: "$major_orbital_energy$"
  minor_orbital_energy_plural: "$major_orbital_energy_plural$"
- num_energy_orbitals: "\nCurrent $major_orbital_energy_plural$: §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!"
+ num_energy_orbitals: "\nปัจจุบัน $major_orbital_energy_plural$: §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!"
  major_orbital_generic: "Housing Orbital"
  major_orbital_generic_plural: "สถานีที่อยู่อาศัยโคจร"
  minor_orbital_generic: "$major_orbital_generic$"
