--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -256,8 +256,8 @@
  requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_GOOD$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_neutral_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_NEUTRAL$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_envoy_harming_relations:1 "$TRIGGER_FAIL$§Rต้องมีทูตเพื่อส่งไป §Yทำลายความสัมพันธ์§!§!"
- requires_envoy_not_harming_relations:0 "$TRIGGER_FAIL$§RCannot be done while an envoy is sent to §YHarm Relations§! with this Empire.§!"
- requires_envoy_not_improving_relations:0 "$TRIGGER_FAIL$§RCannot be done while an envoy is sent to §YImprove Relations§! with this Empire.§!"
+ requires_envoy_not_harming_relations:0 "$TRIGGER_FAIL$§Rไม่สามารถทำได้ในขณะที่ทูตถูกส่งไป §Yทำลายความสัมพันธ์§! กับจักรวรรดินี้§!"
+ requires_envoy_not_improving_relations:0 "$TRIGGER_FAIL$§Rไม่สามารถทำได้ในขณะที่ทูตถูกส่งไป §Yปรับปรุงความสัมพันธ์§! กับจักรวรรดินี้§!"
  influence_cost_for_improving_relations_effect:1 "การส่งทูตไป §Y$improve_relations_TITLE$§! มีค่าใช้จ่าย £influence£ 0.25 ต่อเดือน\n"
  influence_cost_for_harming_relations_effect:1 "การส่งทูตไป §Y$harm_relations_TITLE$§! มีค่าใช้จ่าย £influence£ 0.25 ต่อเดือน\n"
  influence_cost_for_improving_or_harming_relations_effect:1 "การส่งทูตไป §Y$improve_relations_TITLE$§! หรือ §Y$harm_relations_TITLE$§! มีค่าใช้จ่าย £influence£ 0.25 ต่อเดือน\n"
@@ -265,6 +265,13 @@
  easy_rivalry:0 "ข้อจำกัดในการกระทำที่เกี่ยวกับ §Yคู่แข่ง§! ผ่อนคลายทั้งเขาและเรา\n"
  envoy_costs:0 "ทูต"
  diplo_closed_borders:0 "$opinion_closed_borders$"
+ requires_embassy_or_diplomatic_networking: "$TRIGGER_FAIL$§Rต้องมี §Yสถานทูต§! หรือวัฒนธรรม §Y$tr_diplomacy_diplomatic_networking$§!§!"
+ requires_embassy_diplomatic_networking_or_universal_transactions: "$TRIGGER_FAIL$§Rต้องมี §Yสถานทูต§!, วัฒนธรรม §Y$tr_diplomacy_diplomatic_networking$§! หรือการยกระดับ §Y$ap_universal_transactions$§!§!"
+ requires_embassy_or_improving_relations: "$TRIGGER_FAIL$§Rต้องมี §Yสถานทูต§! หรือ ทูตที่ §Yปรับปรุงความสัมพันธ์§!§!"
+ requires_10_trust_or_neutral: "$TRIGGER_FAIL$§Rต้องมี $OPINION_NEUTRAL$ หรือความเชื่อใจ §Y10§!§!"
+ requires_20_trust_or_good: "$TRIGGER_FAIL$§Rต้องมี $OPINION_GOOD$ หรือความเชื่อใจ §Y20§!§!"
+ requires_30_trust_or_excellent: "$TRIGGER_FAIL$§Rต้องมี $OPINION_EXCELLENT$ หรือความเชื่อใจ §Y30§!§!"
+ requires_50_trust_or_excellent: "$TRIGGER_FAIL$§Rต้องมี $OPINION_EXCELLENT$ หรือความเชื่อใจ §Y50§!§!"
  EMPIRE_OVERVIEW:0 "ภาพรวมของจักรวรรดิ"
  BASE_FEDERATION_COHESION:0 "ฐาน: $VALUE|2Y$"
  FEDERATION_LAW_COHESION:0 "$LAW$ $CATEGORY$: $VALUE|2+=$"
@@ -650,17 +657,17 @@
  federation_recipient_no_separate_treaties:0 "§RTheir §Y$law_category_separate_treaties$§! is §Y$treaties_separate_no$§! by Federation Law, so they cannot enter into such an agreement.§!"
  federation_automatic_research:0 "§RWe already have free and automatic §YResearch Agreements§! due to being in a $research_federation$ federation.§!"
  default_federation:0 "สหพันธ์กาแล็กติก"
- default_federation_desc:1 "สมาชิกของสหพันธ์นี้พร้อมใจให้ความร่วมมือซึ่งกันและกัน พวกเขาจะจัดการกับปัญหาที่อาจเกิดขึ้นร่วมกัน"
+ default_federation_desc:1 "สมาชิกสหพันธ์นี้พร้อมให้ความร่วมมือซึ่งกันและกัน พวกเขาจะจัดการปัญหาร่วมกัน"
  trade_federation:0 "สมาคมการค้า"
- trade_federation_desc:0 "This Federation has a distinct focus on free markets and economic growth."
+ trade_federation_desc:0 "สหพันธ์นี้ให้ความสำคัญกับตลาดเสรีและการเติบโตทางเศรษฐกิจ"
  research_federation:0 "ความร่วมมือทางด้านการวิจัย"
- research_federation_desc:1 "This Federation leans towards technocracy, with an acute focus on discerning universal truths."
+ research_federation_desc:1 "สหพันธ์นี้มีแนวทางไปสู่ระบอบเทคโนโลยีโดยมุ่งเน้นไปที่ความจริงสากล"
  military_federation:0 "พันธมิตรสงคราม"
- military_federation_desc:1 "Members of this Federation seek to close their ranks around the ideals of camaraderie, martial prowess and military cooperation."
+ military_federation_desc:1 "สมาชิกของสหพันธ์นี้พยายามที่จะเข้าใกล้กัน มีความกล้าหาญและความร่วมมือทางทหาร"
  hegemony_federation:0 "สหพันธ์มหาอำนาจ"
- hegemony_federation_desc:0 "Federations of this type are most often built around one powerful empire surrounded by lesser satellite states."
+ hegemony_federation_desc:0 "สหพันธรัฐนี้สร้างขึ้นโดยมีจักรวรรดิทรงพลังแห่งเดียวล้อมรอบด้วยรัฐบริวาร"
  spiritualist_federation:0 "พันธสัญญาศักดิ์สิทธิ์"
- spiritualist_federation_desc:1 "This Federation promotes spiritualist scholarship, and asserts reverence for all things divine."
+ spiritualist_federation_desc:1 "สหพันธ์นี้ส่งเสริมการศึกษาเรื่องจิตวิญญาณและแสดงความเคารพต่อทุกสิ่งอันศักดิ์สิทธิ์"
  federation_fleet_size_1:0 "แลกเปลี่ยนเจ้าหน้าที่"
  federation_fleet_size_1_desc:1 "ความสามารถในการทำงานร่วมกันและความสามารถในการวางกำลังของกองยานรวมของเราได้รับการปรับปรุงอย่างมากโดยการฝึกซ้อมกองยานบ่อยๆ โดยมีการหมุนเวียนคำสั่งระหว่างเจ้าหน้าที่ประจำของทุกรัฐ"
  federation_fleet_size_2:0 "มาตรฐานลอจิสติกส์"
@@ -765,7 +772,7 @@
  president_diplo_weight_steal_1_effect:1 "Every member transfers §Y10%§! of their §Y$MOD_DIPLO_WEIGHT_MULT$§! to the president."
  spiritualist_federation_passive:0 "$spiritualist_federation$"
  spiritualist_federation_passive_desc:0 "$spiritualist_federation_desc$"
- spiritualist_federation_passive_tooltip:0 "Robotic Empires may not become president of the $spiritualist_federation$ under normal circumstances.\n$mod_country_unity_produces_mult$: §G+10%§!"
+ spiritualist_federation_passive_tooltip:0 "จักรวรรดิหุ่นยนต์ไม่สามารถเป็นประธานของ$spiritualist_federation$ได้ภายใต้สถานการณ์ปกติ\n$mod_country_unity_produces_mult$: §G+10%§!"
  spiritualist_envoys_1:0 "Proselytizing Envoys"
  spiritualist_envoys_1_desc:0 "Many are the sacrileges that our envoys may prevent."
  spiritualist_envoys_1_effect:0 "§YEnvoys§! assigned to the Federation will now provide §G50%§! more §YCohesion§! and increase §YSpiritualist§! ethic attraction within our Empire by §Y20%§!."
@@ -810,7 +817,7 @@
  default_federation_passive_effect:0 "โทษจากจริยธรรมที่แตกต่างกันของสมาชิกลดลง §Y50%§! เพื่อความสามัคคีในสหพันธ์"
  trade_federation_passive_effect:1 "Grants access to the §YTrade League§! Trade Policy, which combines the bonuses of $trade_policy_consumer_goods$ and $trade_policy_unity$."
  hegemony_federation_passive_effect:1 "Members cannot freely leave the federation without the president's approval. If the president refuses, the member gets the §YSecession§! Casus Belli to leave the federation."
- research_federation_passive_effect:0 "Free and automatic §YResearch Agreements§! between all federation members."
+ research_federation_passive_effect:0 "§Yข้อตกลงการวิจัย§! ระหว่างสมาชิกสหพันธ์ทั้งหมดฟรีและอัตโนมัติ"
  requires_federation_lvl_2:0 "§Rต้องการสหพันธ์เลเวล §Y2§!§!"
  requires_federation_lvl_3:0 "§Rต้องการสหพันธ์เลเวล §Y3§!§!"
  requires_federation_lvl_4:0 "§Rต้องการสหพันธ์เลเวล §Y4§!§!"
@@ -873,6 +880,7 @@
  federation_acceptance_strong_president:0 "Is Strongest and President"
  federation_acceptance_weaker:0 "Is less powerful"
  federation_acceptance_has_subjects:0 "มีบริวาร"
+ federation_acceptance_has_no_subjects: "ไม่มีบริวาร"
  federation_acceptance_hegemony_or_default:0 "$default_federation$ or $hegemony_federation$"
  federation_acceptance_hegemony_federation:0 "$hegemony_federation$"
  federation_acceptance_military_federation:0 "$military_federation$"
@@ -1509,7 +1517,7 @@
  CALL_IN_FAVOR_UNABLE:0 "เราไม่สามารถเรียกการสนับสนุนใดๆได้"
  CALL_IN_FAVOR_ONLY_IF_VOTING:0 "We must take a stand for or against the Resolution to call in favors."
  CALL_IN_FAVOR_ONLY_IF_IN_FAVOR:0 "Can only call in favors if we are supporting the Resolution."
- CALL_IN_FAVOR_UNAVAILABLE:0 "We have no Favors available. Trade with an Empire for Favors to gain them."
+ CALL_IN_FAVOR_UNAVAILABLE:1 "We have no Favors available."
  CALL_IN_FAVOR_ICON:0 "£call_favor£ $CALL_IN_FAVOR$"
  CLICK_CALL_IN_FAVOR:1 "§GClick to Call in Favor(s) to boost your Diplomatic Weight on this Resolution§!"
  CALL_IN_FAVOR_TOOLTIP:0 "§Hทวงบุญคุณ§!"
@@ -3072,7 +3080,7 @@
  shares_and_bonds:0 "Shares & Bonds"
  shares_and_bonds_desc:0 "Respect and trust in the Federation's shared economy has led to a rise in consensus amongst members."
  triggered_opinion_federation_midas:0 "$midas_stigma$"
- REMOVE_WAR_PARTICIPANT_EFFECT:1 "$COUNTRY$ is removed from the $WAR$"
+ REMOVE_WAR_PARTICIPANT_EFFECT:1 "$COUNTRY$ ถูกลบออกจาก $WAR$"
  effect_random_war:1 "Random War"
  effect_every_war:1 "Every War"
  count_war_trigger:2 "จำนวนสงคราม$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
