--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -668,12 +668,12 @@
  job_low_tech_researcher:0 "Scientist"
  job_low_tech_researcher_plural:0 "Scientists"
  job_low_tech_researcher_desc:0 "Our former masters ignored our gifts and downplayed our intelligence. Now, the keenest minds among us are free to follow their ambition."
- job_low_tech_researcher_effect_desc:0 "£job_low_tech_researcher£ $job_low_tech_researcher_plural$ turn $r_consumer_goods$ into $r_research$"
+ job_low_tech_researcher_effect_desc:0 "£job_low_tech_researcher£ $job_low_tech_researcher_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_research$"
  mod_job_low_tech_researcher_add:0 "$job_low_tech_researcher$ Jobs"
  job_low_tech_laborer:0 "Laborer"
  job_low_tech_laborer_plural:0 "Laborers"
  job_low_tech_laborer_desc:0 "As assets they were worked to the bone. With freedom has come renewed purpose, and a vigor that no slave could ever hope to match."
- job_low_tech_laborer_effect_desc:0 "£job_low_tech_laborer£ $job_low_tech_laborer_plural$ turn $r_minerals$ into $r_consumer_goods$ and $r_alloys$"
+ job_low_tech_laborer_effect_desc:0 "£job_low_tech_laborer£ $job_low_tech_laborer_plural$ เปลี่ยน $r_minerals$ เป็น $r_consumer_goods$ และ $r_alloys$"
  mod_job_low_tech_laborer_add:0 "$job_low_tech_laborer$ Jobs"
  planet_laborer:0 "Laborer Jobs"
  job_low_tech_technician:0 "Reactor Engineer"
@@ -694,7 +694,7 @@
  job_low_tech_priest:0 "Preacher"
  job_low_tech_priest_plural:0 "Preachers"
  job_low_tech_priest_desc:0 "Our preachers remind us that freedom is a divine right; united in faith, we find our common strength."
- job_low_tech_priest_effect_desc:0 "£job_low_tech_priest£ $job_low_tech_priest_plural$ turn $r_consumer_goods$ into $r_unity$ and $r_amenities$"
+ job_low_tech_priest_effect_desc:0 "£job_low_tech_priest£ $job_low_tech_priest_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$ และ $r_amenities$"
  mod_job_low_tech_priest_add:0 "$job_low_tech_priest$ Jobs"
  job_low_tech_warrior:0 "Militia"
  job_low_tech_warrior_plural:0 "Military Conscripts"
@@ -704,12 +704,12 @@
  job_low_tech_bureaucrat:0 "Administrator"
  job_low_tech_bureaucrat_plural:0 "Administrators"
  job_low_tech_bureaucrat_desc:0 "Our former masters delegated much of their empire's day-to-day administration to indentured assets. The result was a class of highly trained logistics personnel."
- job_low_tech_bureaucrat_effect_desc:0 "£job_low_tech_bureaucrat£ $job_low_tech_bureaucrat_plural$ turn $r_consumer_goods$ into $r_unity$"
+ job_low_tech_bureaucrat_effect_desc:0 "£job_low_tech_bureaucrat£ $job_low_tech_bureaucrat_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$"
  mod_job_low_tech_bureaucrat_add:0 "$job_low_tech_bureaucrat$ Jobs"
  job_low_tech_manager:0 "Supervisor"
  job_low_tech_manager_plural:0 "Supervisors"
  job_low_tech_manager_desc:0 "Our former masters delegated much of their empire's day-to-day administration to indentured assets. The result was a class of highly trained managers."
- job_low_tech_manager_effect_desc:0 "£job_low_tech_manager£ $job_low_tech_manager_plural$ turn $r_consumer_goods$ into $r_unity$ and $r_trade_value$"
+ job_low_tech_manager_effect_desc:0 "£job_low_tech_manager£ $job_low_tech_manager_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$ และ $r_trade_value$"
  mod_job_low_tech_manager_add:0 "$job_low_tech_manager$ Jobs"
  building_low_tech_farm:0 "Makeshift Farms"
  building_low_tech_farm_desc:0 "Hardscrabble farmsteads tilling the soil for meager returns."
