--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -486,14 +486,15 @@
  FRONT_LOAD:1 "โหลดเกม"
  FRONT_CREDITS:1 "เครดิต"
  FRONT_SETTINGS:1 "ตั้งค่า"
+ FRONT_ADDITIONAL_CONTENT: "เนื้อหาเพิ่มเติม"
  FRONT_QUIT:1 "ออก"
  FRONT_BACK:0 "กลับ"
  FRONT_SAVE_GAMES:0 "เลือกเซฟเกม"
  FRONT_LAUNCH:0 "เริ่ม"
  FRONT_MULTIPLAYER:1 "เล่นหลายคน"
  FRONT_MULTIPLAYER_DISABLED:0 "§Gเล่นหลายคน§!"
- FRONT_COOP:1 "ช่วยกันเล่น £beta£"
- FRONT_COOP_DISABLED:1 "§GCo-op§! £beta£"
+ FRONT_COOP:2 "ช่วยกันเล่น"
+ FRONT_COOP_DISABLED:2 "§GCo-op§!"
  LOAD_SAVE_GAME:0 "กําลังโหลดเซฟเกม"
  CALCULATING_CACHE:0 "กำลังเตรียมเกม"
  LOGIN_REQUIRED:0 "ต้องเข้าสู่ระบบ"
@@ -1306,7 +1307,7 @@
  COLONIZE_DESC:0 "We can colonize planets to expand the Borders of our empire and gain more space for our Pops."
  RECRUIT:0 "คัดเลือกใหม่"
  RECRUIT_INFO:0 "เกณฑ์กองทัพจู่โจมใหม่จากประชากรในดาวดวงนี้"
- RECRUITMENT_TIME:0 "Recruitment Time"
+ RECRUITMENT_TIME:0 "เวลาในการคัดเลือก"
  DRAIN_SECTOR:0 "Drain Sector Stockpile"
  DRAIN_SECTOR_TOO_FEW_RESOURCES:0 "§RSector must have at least $MIN|Y$ Energy and Minerals stockpiled to be able to drain it.§!"
  DRAIN_SECTOR_AMOUNT:0 "Drain $FRACTION|%0Y$ of the Sector's stockpile, transferring £minerals£ $MINERALS|G$ £energy£ $ENERGY|G$ to the Empire stockpile at the cost of £influence£ $COST|0Y$."
@@ -1317,7 +1318,7 @@
  ENEMIES:0 "ศัตรู"
  NO_DEFENDING_GENERAL:0 "No Defending General"
  NO_ATTACKING_GENERAL:0 "No Attacking General"
- RECRUITMENT:0 "Recruitment"
+ RECRUITMENT:0 "การคัดเลือก"
  ARMIES:0 "กองทัพ"
  GAME_MULTIPLAYER_LOBBY:0 "ห้องเกม"
  MATCHMAKING_CONNECTION_RESTRICTED:0 "เครือข่ายที่ถูกจำกัด"
@@ -1604,7 +1605,7 @@
  NOT_ALLOWED_TO_ADD_FLEETS:0 "Not allowed to add new ships to this fleet."
  NOT_ALLOWED_TO_SPLIT_FLEET:0 "Not allowed to split this fleet."
  NOT_ALLOWED_TO_LEAVE_FLEET:0 "Ship is not allowed to leave the fleet."
- NOT_ALLOWED_TO_MERGE_FLEET:0 "Not allowed to merge $FLEET|Y$"
+ NOT_ALLOWED_TO_MERGE_FLEET:0 "ไม่อนุญาตให้รวมเข้ากับ $FLEET|Y$"
  CAN_EXECUTE_ACTION_INVALID:0 "Action doesn't exist."
  WAR_EXHAUSTION_DESC:0 "War exhaustion is gained from destroyed civilian ships and effects pop happiness"
  FLEETORDER_BUILD_MILITARY_STATION:0 "Build Military Station"
@@ -1769,7 +1770,7 @@
  SYSTEM_TEXT:0 "$SYSTEM|E$"
  TOOLTIP_GAL_OBJ_STATION_ICON:1 "$CLASS|H$\n$OWNERS|Y$ มีอย่างน้อยหนึ่ง $CLASS$ ในระบบดาวนี้\n"
  TOOLTIP_GAL_OBJ_STATIONS_ICON:0 "$CLASS|H$\nFollowing Empires have $CLASS$s in this system:\n$OWNERS|Y$"
- TOOLTIP_GAL_OBJ_STATION_UNCLAIMED:0 "$CLASS|H$\nThis system has at least one unclaimed $CLASS$"
+ TOOLTIP_GAL_OBJ_STATION_UNCLAIMED:0 "$CLASS|H$\nระบบนี้มี$CLASS$ที่ไม่มีการอ้างสิทธิ์อย่างน้อยหนึ่งอย่าง"
  EMPIRE_COLONIES:0 "อาณานิคมของจักรวรรดิ"
  NUM_EMPIRE_COLONIES:0 "อาณานิคมของจักรวรรดิ: §Y$VAL$§!"
  EMPIRE_COLONIES_UNKNOWN:0 "จักรวรรดิไม่มีอาณานิคมที่เรารู้จัก"
@@ -2314,7 +2315,7 @@
  RIVAL:0 "คู่แข่ง"
  RIVALRY:0 "คู่แข่ง"
  opinion_federation_associate:0 "มีส่วนร่วมในสหพันธ์"
- TRUST_TOOLTIP:0 "§HTrust§!\nTheir trust of us changes by $VALUE|+=$ each month due to:"
+ TRUST_TOOLTIP:0 "§HTrust§!\nWe currently have $TRUST|Y$ Trust.\nTheir trust of us changes by $VALUE|+=$ each month due to:"
  TRUST_TOOLTIP_PLAYER:0 "§HTrust§!\nTrust is not used by players."
  TRUST_NO_ALLIANCE:1 "no significant diplomatic deals"
  TRUST_DESC:0 "§HTrust§! is a measure of our long-term relationship with this Empire and directly impacts their opinion of us. It increases from maintaining diplomatic and economic agreements with them. \n\nTheir maximum §HTrust§! of us is $VALUE|Y$ due to $KEYWORD$."
@@ -2483,15 +2484,15 @@
  CREATE_SECTOR:1 "§Hสร้างเซ็กเตอร์ใหม่§!\nจะเป็นการสร้างเซ็กเตอร์ใหม่โดยมีดาวเคราะห์ดวงนี้เป็นศูนย์กลางของเซ็กเตอร์ ระบบดาวทั้งหมดภายใน §Y4§! จั้ม, ซึ่งก่อนหน้านี้ไม่ได้เป็นส่วนหนึ่งของเซ็กเตอร์ใดๆจะกลายเป็นส่วนหนึ่งของเซ็กเตอร์ใหม่นี้"
  CREATE_SECTOR_DESC:0 "Form a new Sector within our Empire with $CAPITAL|Y$ as its capital."
  CREATE_SECTOR_NOT_ENOUGH_PLANETS:0 "§RWe need to control at least two planets to create a Sector.§!"
- CANNOT_MOVE_CAPITAL:0 "§RCannot move sector capital here§!"
- MOVE_SECTOR_CAPITAL:1 "§HMove Sector Capital§!\nThis will move the sector capital to this planet, which may redraw which systems belong to the sector."
+ CANNOT_MOVE_CAPITAL:0 "§Rไม่สามารถย้ายศูนย์กลางของเซ็กเตอร์มาที่นี่ได้§!"
+ MOVE_SECTOR_CAPITAL:1 "§Hย้ายศูนย์กลางเซ็กเตอร์§!\nสิ่งนี้จะย้ายศูนย์กลางของเซกเตอร์ไปยังดาวเคราะห์ดวงนี้ ซึ่งอาจจัดเขตระบบใหม่ที่เป็นของเซกเตอร์นั้น"
  DELETE_SECTOR:1 "§Hลบเซ็กเตอร์§!\nการดำเนินการนี้จะลบเซ็กเตอร์นี้ ทรัพยากรใน$LOCAL_SECTOR_STOCKPILE$จะถูกโอนไปยัง$SHARED_SECTOR_STOCKPILE$ สามารถดูคลังพัสดุได้ในหน้าต่าง §Y$PLANET_LIST$§!\n\n§Eการลบเซ็กเตอร์นั้นไม่ได้เป็นอันตรายมากนักและสามารถสร้างเซ็กเตอร์ใหม่ได้อย่างง่ายดาย§!"
  CANNOT_DELETE_SECTOR:0 "§Rไม่สามารถลบเซ็กเตอร์ได้§!"
  CANNOT_DELETE_CORE_SECTOR:0 "§Rเซ็กเตอร์แกนกลาง§!"
  COUNTRY_CAPITAL:0 "§Rไม่สามารถย้ายศูนย์กลาง(เมืองหลวง)ของจักรวรรดิได้§!"
  DELETE_SECTOR_CONFIRM_NAME:1 "ลบเซ็กเตอร์?"
  DELETE_SECTOR_CONFIRM_DESC:1 "§Eสิ่งนี้จะลบผลประโยชน์ของเซ็กเตอร์ทั้งหมดออกจากดาวเคราะห์ที่อยู่ในเซ็กเตอร์§!"
- MOVE_SECTOR_CAPITAL_CONFIRM_NAME:1 "ย้ายเซ็กเตอร์ศูนย์กลาง(เมืองหลวง)?"
+ MOVE_SECTOR_CAPITAL_CONFIRM_NAME:1 "ย้ายศูนย์กลางของเซ็กเตอร์?"
  MOVE_SECTOR_CAPITAL_CONFIRM_DESC:1 "§EAll systems outside of $RANGE|Y0$ systems range will be removed from the Sector.§!"
  NO_SECTOR:0 "ไม่มีเซ็กเตอร์"
  FRONTIER_PLANET:0 "เขตแดนดาวเคราะห์"
@@ -3504,7 +3505,7 @@
  ASSIST_RESEARCH_WRONG_OWNER:0 "Cannot assist research on non-colonized planets."
  ASSIST_RESEARCH_NO_APPROPRIATE_PLANET:0 "Cannot find appropriate planet to Assist Research."
  FLEETORDER_TOP_LEVEL_TEXT:2 "$ORDER$ (คำสั่ง §Y+$ORDERS_LEFT$§!)"
- FLEETORDER_ASSIST_RESEARCH:1 "Assisting Research on $PLANET|Y$"
+ FLEETORDER_ASSIST_RESEARCH:1 "ช่วยการวิจัยที่ $PLANET|Y$"
  FLEETORDER_ASSIST_RESEARCH_BUTTON:0 "ช่วยวิจัย"
  FLEETORDER_ASSIST_CLOAKING_DETECTION:0 "Assisting Cloaking Detection on $STARBASE|Y$"
  FLEETORDER_ASSIST_CLOAKING_DETECTION_BUTTON:0 "ตรวจจับการพรางตัว"
@@ -4427,7 +4428,7 @@
  building_resource_silo_desc:0 "Massive resource silos and storage facilities where large quantities of resources can be safely kept."
  sm_hydroponics_bay:0 "ที่ปลูกพืชโดยไม่ใช้ดิน"
  sm_hydroponics_bay_desc:0 "By dedicating a section of this Starbase to Hydroponic farming, the station will be able to feed itself and even export excess produce to other systems."
- sm_mining_bay: "Mining Bay"
+ sm_mining_bay: "ที่ทำเหมืองแร่"
  sm_mining_bay_desc: "A section of this Starbase has been devoted to extracting and refining resources from a nearby $pc_shattered$."
  sm_target_uplink_computer:0 "คอมพิวเตอร์เชื่อมสัญญาณเป้าหมาย"
  sm_target_uplink_computer_desc:1 "An advanced targeting computer that collects and analyzes data from all friendly sensor sources in-system. This makes it far easier for the Starbase to achieve targeting solutions.\n"
@@ -4544,7 +4545,7 @@
  GROWTH:0 "เพิ่ม"
  GROWTH_DESC:0 "การเพิ่มของประชากรแสดงให้เห็นว่าประชากรเพิ่มจำนวนใกล้เต็มที่เพียงใด เฉพาะประชากรเพิ่มเท่านั้นที่สามารถเก็บทรัพยากรได้"
  COLONY_SHIP_SELECTION:0 "ยานอาณานิคม Selection"
- PLANET_VIEW_RECRUITMENT:0 "Recruitment"
+ PLANET_VIEW_RECRUITMENT:0 "การคัดเลือก"
  PLANET_VIEW_RECRUIT:0 "รับสมัครทหารบก"
  PLANET_VIEW_RECRUIT_DESC:1 "We can recruit Armies to help defend or capture planets."
  PLANET_VIEW_RECRUIT_CLICK_DESC:0 "§Gคลิกเพื่อแสดงรายการประเภทกองทัพที่ใช้ได้§!"
@@ -4608,9 +4609,9 @@
  SOCIETY_RESEARCH_DESC:0 "Society Research drives progress towards the Society technologies researched by our Empire."
  ENGINEERING_RESEARCH_DESC:0 "Engineering Research drives progress towards the Engineering technologies researched by our Empire."
  MODIFIER_EXPIRE_DESC:1 "จะหมดเวลาใน $TIME$"
- TIME_IN_DAYS:0 "$DAYS|H$ วัน"
- TIME_IN_MONTHS:0 "$MONTHS|H$ months"
- TIME_IN_YEARS:0 "$YEARS|H$ ปี"
+ TIME_IN_DAYS:1 "$DAYS|H$ วัน"
+ TIME_IN_MONTHS:1 "$MONTHS|H$ เดือน"
+ TIME_IN_YEARS:1 "$YEARS|H$ ปี"
  PLANET_STRENGTH:0 "Planet Strength"
  PLANET_STRENGTH_DESC:0 "Planet Strength is the planet's capability to defend itself."
  DISBAND_TITLE:1 "ปลดประจำการกองทัพบก?"
@@ -5962,10 +5963,10 @@
  STALLED_MISSING_LAB:0 "§RSTALLED§! Missing Science Ship"
  RESEARCH:0 "วิจัย"
  RESEARCHED:0 "รายการที่วิจัยแล้ว"
- PROJECT_ALREADY_IN_QUEUE:0 "Project is already researching"
- PROJECT_ALREADY_FINISHED:0 "Project has already been researched."
- PROJECT_ALREADY_FAILED:0 "Project has already failed."
- PROJECT_ALREADY_TIMED_OUT:0 "Project has already timed out."
+ PROJECT_ALREADY_IN_QUEUE:0 "โครงการกำลังวิจัยอยู่แล้ว"
+ PROJECT_ALREADY_FINISHED:0 "โครงการวิจัยเสร็จแล้ว"
+ PROJECT_ALREADY_FAILED:0 "โครงการล้มเหลวไปแล้ว"
+ PROJECT_ALREADY_TIMED_OUT:0 "โครงการหมดเวลาไปแล้ว"
  PROJECT_ALREADY_ABORTED:0 "โครงการยังไม่พร้อมใช้งาน"
  PROJECT_CHOSEN_OTHER:0 "We have already chosen another project."
  PROJECT_ESTIMATED_TIME:3 "เริ่มโครงการ\n§Eจะใช้เวลาไม่เกิน $MONTHS|Y$ เดือนจึงจะเสร็จสมบูรณ์§!"
@@ -7407,7 +7408,7 @@
  ACTION_END_RIVALRY_DESC:0 "ยุติการเป็น $RIVALRY$ ของเราด้วย §H[Recipient.GetName]§!"
  ACTION_END_RIVALRY_COST:0 "We will no longer gain influence each month, but relations will improve."
  ACTION_INSULT_TITLE:0 "ดูถูกเหยียดหยาม"
- ACTION_INSULT_DESC:1 "การดูถูกจะลดทัศนคติของพวกเขาที่มีต่อเราลงอย่างมาก[Actor.GetCreativeInsultTooltip]"
+ ACTION_INSULT_DESC:2 "การดูหมิ่นจะลดทัศนคติและความเชื่อใจของพวกเขาที่มีต่อเราอย่างมาก[Actor.GetCreativeInsultTooltip]"
  ACTION_INSULT_OFFER_DESC:0 "Wanton abuse like this cannot be overlooked. Our relationship with §H[Actor.GetName]§! has declined."
  ACTION_OFFER_FEDERATION_ASSOCIATION_TITLE:0 "เสนอสถานะการมีส่วนร่วม"
  ACTION_OFFER_FEDERATION_ASSOCIATION_DESC:1 "We can offer them association status with our Federation. This will act as a non-aggression pact between them and all members of the Federation."
@@ -7496,6 +7497,7 @@
  ACTION_OPEN_PRE_FTL_HOMEWORLD_TITLE:0 "$GO_TO_preFTL_PLANET$"
  ACTION_OPEN_PRE_FTL_HOMEWORLD_DESC:0 "$GO_TO_preFTL_PLANET_tt$"
  ACTION_OPEN_PRE_FTL_HOMEWORLD_OFFER_DESC:0 " "
+ LACK_OF_TRUST: "ขาดความเชื่อใจ"
  DIPLO_ACTION_ADD_TRUST:1 "ความไว้ใจของพวกเขาต่อเราจะเพิ่มขึ้น $TRUST$ ต่อเดือน สูงสุดที่ $MAX_TRUST|0G$"
  DIPLO_ACTION_INFLUENCE_COST:0 "จะทำให้เราเสียค่าอิทธิพล $INF|R$ ต่อเดือน"
  DIPLO_ACTION_ACTOR_RESOURCES:1 "ข้อตกลงนี้จะมอบ §Y$RESOURCES$§! ให้กับเรา ในแต่ละเดือน"
@@ -7554,7 +7556,7 @@
  ACTION_BREAK_RESEARCH_AGREEMENT_DESC:0 "$ACTION_BREAK_RESEARCH_AGREEMENT_TYPE_DESC$"
  ACTION_GUARANTEE_INDEPENDENCE_TYPE:0 "รับรองเอกราช"
  ACTION_GUARANTEE_INDEPENDENCE_TYPE_DESC:0 "การรับประกันความเป็นอิสระของจักรวรรดินี้ หากพวกเขาถูกโจมตีเราจะทำช่วยป้องกันพวกเขาโดยอัตโนมัติ"
- ACTION_GUARANTEE_INDEPENDENCE_OFFER_DESC:0 "§H[Actor.GetName]§! guarantees the independence of our Empire. If we are attacked, they will automatically come to our defense."
+ ACTION_GUARANTEE_INDEPENDENCE_OFFER_DESC:0 "§H[Actor.GetName]§! รับประกันความเป็นอิสระของจักรวรรดิเรา หากเราถูกโจมตี พวกเขาจะเข้ามาป้องกันเราโดยอัตโนมัติ"
  ACTION_BREAK_GUARANTEE_TYPE:0 "ยกเลิกการรับรองเอกราช"
  ACTION_BREAK_GUARANTEE_TYPE_DESC:0 "หยุดการรับรองเอกราชของจักรวรรดินี้"
  ACTION_GUARANTEE_INDEPENDENCE_TITLE:0 "รับรองเอกราช"
@@ -10323,40 +10325,40 @@
  food_policy_gestalt_generous_desc:0 "A well-fed Drone is a productive Drone.\n\n"
  policy_research_policy:0 "Research Focus Policy"
  policy_research_policy_desc:0 "Research is a way forward for our empire, advancing its knowledge and bringing new possibilities. We must decide what is the best focus for our researchers and where we should pool our brightest."
- research_policy_no_focus:0 "No Focus"
+ research_policy_no_focus:0 "ไม่โฟกัส"
  research_policy_no_focus_name:0 "$research_policy_no_focus$"
  research_policy_no_focus_desc:0 "By not focusing on any particular branch, our researchers will have more freedom to pursue their own experiments."
- research_policy_field_manipulation:0 "Field Manipulation"
+ research_policy_field_manipulation:0 "การควบคุมสนามพลัง"
  research_policy_field_manipulation_name:0 "$research_policy_field_manipulation$"
  research_policy_field_manipulation_desc:0 "Focusing on §YField Manipulation§! technologies will give us an advantage in the given field of research."
- research_policy_particles:0 "Particles"
+ research_policy_particles:0 "อนุภาค"
  research_policy_particles_name:0 "$research_policy_particles$"
  research_policy_particles_desc:0 "Focusing on §YParticles§! technologies will give us an advantage in the given field of research."
- research_policy_computing:0 "Computing"
+ research_policy_computing:0 "การคำนวณ"
  research_policy_computing_name:0 "$research_policy_computing$"
  research_policy_computing_desc:0 "Focusing on §YComputing§! technologies will give us an advantage in the given field of research."
- research_policy_new_worlds:0 "New Worlds"
+ research_policy_new_worlds:0 "โลกใหม่"
  research_policy_new_worlds_name:0 "$research_policy_new_worlds$"
  research_policy_new_worlds_desc:0 "Focusing on §YNew Worlds§! technologies will give us an advantage in the given field of research."
- research_policy_statecraft:0 "Statecraft"
+ research_policy_statecraft:0 "การปกครอง"
  research_policy_statecraft_name:0 "$research_policy_statecraft$"
  research_policy_statecraft_desc:0 "Focusing on §YStatecraft§! technologies will give us an advantage in the given field of research."
- research_policy_biology:0 "Biology"
+ research_policy_biology:0 "ชีววิทยา"
  research_policy_biology_name:0 "$research_policy_biology$"
  research_policy_biology_desc:0 "Focusing on §YBiology§! technologies will give us an advantage in the given field of research."
- research_policy_military_theory:0 "Military Theory"
+ research_policy_military_theory:0 "ทฤษฎีการทหาร"
  research_policy_military_theory_name:0 "$research_policy_military_theory$"
  research_policy_military_theory_desc:0 "Focusing on §YMilitary Theory§! technologies will give us an advantage in the given field of research."
- research_policy_materials:0 "Materials"
+ research_policy_materials:0 "วัสดุ"
  research_policy_materials_name:0 "$research_policy_materials$"
  research_policy_materials_desc:0 "Focusing on §YMaterials§! technologies will give us an advantage in the given field of research."
- research_policy_propulsion:0 "Propulsion"
+ research_policy_propulsion:0 "ระบบขับเคลื่อน"
  research_policy_propulsion_name:0 "$research_policy_propulsion$"
  research_policy_propulsion_desc:0 "Focusing on §YPropulsion§! technologies will give us an advantage in the given field of research."
- research_policy_voidcraft:0 "Voidcraft"
+ research_policy_voidcraft:0 "ยานอวกาศ"
  research_policy_voidcraft_name:0 "$research_policy_voidcraft$"
  research_policy_voidcraft_desc:0 "Focusing on §YVoidcraft§! technologies will give us an advantage in the given field of research."
- research_policy_industry:0 "Industry"
+ research_policy_industry:0 "อุตสาหกรรม"
  research_policy_industry_name:0 "$research_policy_industry$"
  research_policy_industry_desc:0 "Focusing on §YIndustry§! technologies will give us an advantage in the given field of research."
  policy_trade_policy:0 "นโยบายการค้า"
@@ -10593,7 +10595,7 @@
  feature_modify_robots_desc:0 "Allows us to design and build specialized $trait_mechanical$ Pops."
  feature_modify_robots_desc_machine_intelligence:0 "Allows us to design and build specialized $trait_machine_unit$ and $trait_mechanical$ Pops."
  feature_wormhole_stabilization:0 "การเดินทางโดยใช้รูหนอน"
- feature_wormhole_stabilization_desc:0 "Allows our ships to travel through wormholes."
+ feature_wormhole_stabilization_desc:0 "ช่วยให้ยานของเราเดินทางผ่านรูหนอนได้"
  feature_gateway_activation:0 "การเดินทางโดยใช้เกตเวย์"
  feature_gateway_activation_desc:0 "Allows us to activate Gateways and allows our ships to travel through them."
  feature_gateway_construction:0 "การก่อสร้างเกตเวย์"
@@ -11638,10 +11640,10 @@
  USE_BYPASS_UNKNOWN_DESTINATION:0 "No known destination"
  USE_BYPASS_INACTIVE_DESTINATION:0 "$DESTINATION|Y$, the destination of $BYPASS|Y$ hasn't been activated yet."
  USE_BYPASS_BYPASS_NOT_CONNECTED_TO_DESTINATION:0 "$DESTINATION$ isn't connected to $BYPASS|Y$"
- FLEETORDER_TRAVEL_TO_ORDER_LABEL:0 "Travel to $DESTINATION|Y$"
- FLEETORDER_USE_BYPASS_ORDER_LABEL:0 "Travel through $BYPASS|Y$"
- FLEETORDER_USE_BYPASS:0 "Travel through $BYPASS|Y$"
- FLEETORDER_USE_BYPASS_DESC:0 "Travel through the $BYPASS_TYPE|Y$ in $SYSTEM$"
+ FLEETORDER_TRAVEL_TO_ORDER_LABEL:0 "เดินทางไปที่ $DESTINATION|Y$"
+ FLEETORDER_USE_BYPASS_ORDER_LABEL:0 "เดินทางผ่าน $BYPASS|Y$"
+ FLEETORDER_USE_BYPASS:0 "เดินทางผ่าน $BYPASS|Y$"
+ FLEETORDER_USE_BYPASS_DESC:0 "เดินทางผ่าน $BYPASS_TYPE|Y$ ในระบบ $SYSTEM$"
  EXPLORE_BYPASS_NOT_NEEDED:1 "ไม่จำเป็นต้องสำรวจ $BYPASS_TYPE|Y$"
  EXPLORE_BYPASS_ALREADY_EXPLORED:0 "$BYPASS|Y$ เคยถูกสำรวจมาแล้วก่อนหน้านี้"
  BYPASS_OPEN_BORDERS_REQUIRED:0 "$TRIGGER_FAIL$ $WHO|Y$ ได้ปิดพรมแดนของพวกเขามาที่เรา"
@@ -11674,7 +11676,7 @@
  BYPASS_DESC_INACTIVE_GATEWAY:0 "ต้องเปิดใช้งานโดยการอัปเกรด §Yเกตเวย์§!"
  BYPASS_DESC_INACTIVE_WORMHOLE:0 "ต้องเปิดใช้งาน"
  BYPASS_DESC_UNEXPLORED:0 "ต้องมีการสำรวจ"
- BYPASS_DESC_MANY_CONNECTIONS:0 "This $TYPE|Y$ is fully connected to the $TYPE$ Network."
+ BYPASS_DESC_MANY_CONNECTIONS:0 "$TYPE|Y$ นี้เชื่อมต่อกับเครือข่าย $TYPE$ โดยสมบูรณ์"
  BYPASS_DESC_ONE_CONNECTION:0 "Connected to $DESTINATION|Y$"
  BYPASS_DESC_ONE_CONNECTION_UNKNOWN:0 "This $Type|Y$ leads to an unknown destination."
  BYPASS_DESC_CLICK_TO_FOCUS:0 "คลิกเพื่อโฟกัสที่อีกด้าน"
@@ -11967,7 +11969,7 @@
  resource_usage_tooltip_title: "ใช้ £$icon$£ $name$ อัตโนมัติ"
  resource_usage_tooltip: "£trigger_yes£ ระบบบริหารดาวเคราะห์อัตโนมัติ ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
  resource_usage_tooltip_neg: "£trigger_no£ ระบบบริหารดาวเคราะห์อัตโนมัติ ไม่ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
- MOD_VERSION:0 "Mod v0.70.4, Update 06/10/2023"
+ MOD_VERSION:0 "Mod v0.70.5, Update 18/10/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - World เดิมใช้(โลก) -> เปลี่ยนเป็น(ดาว) *บางคำยังใช้โลกอยู่ แต่ส่วนใหญ่จะใช้คำว่าดาว\n - The Shroud -> ดินแดนพลังจิตบริสุทธิ์/อาณาจักรแห่งพลังจิตบริสุทธิ์\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
