--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -181,7 +181,7 @@
  marauder.76.a:0 "We had a contract!"
  marauder.77.name:0 "Mercenaries Join Great Khan"
  marauder.77.desc:0 "The rise of the [raider_khanate.GetName] under their vaunted Great Khan has triggered mass defections among all of the [raider_khanate.GetSpeciesName] mercenaries that were in our employ! Caught up in a sudden influx of nationalistic fervor, the traitors have all abandoned their contracts and left to join the Great Khan's growing war machine."
- marauder.86.a.desc:0 "Attention, [Root.GetSpeciesNamePlural].\n\nIf you have need of others to fight your battles for you, know that [marauder_mercenary_country.GetSpeciesName] mercenary fleets are now available for hire. Yes, you heard correctly. If you can meet their prices, the best mercenaries in the galaxy are now willing to fight for you."
+ marauder.86.a.desc:0 "โปรดทราบ [Root.GetSpeciesNamePlural]\n\nหากคุณต้องการคนอื่นมาสู้รบแทนคุณ โปรดทราบว่ากองทหารรับจ้าง [marauder_mercenary_country.GetSpeciesName] พร้อมให้บริการแล้ว ใช่! คุณได้ยินถูกต้องแล้ว หากคุณจ่ายให้เราในตอนนี้ ทหารรับจ้างที่เก่งที่สุดในกาแล็กซี ก็พร้อมที่จะต่อสู้เพื่อคุณ"
  marauder.86.a:0 "ขอบคุณที่บอก"
  marauder.87.a.desc:0 "HYEEEIIIEEEEEE!!!! เร่เข้ามาทางนี้, ท่านผู้มีอุปการะคุณทุกท่าน!\n\nเรื่องก็มีอยู่ว่า... นักรบของเราเบื่อหน่ายในชีวิตและสร้างแต่ปัญหามากมาย! ชอบต่อสู้กันไปมา ตายไปก็มาก! แต่ตอนนี้เราค้นพบทางออกแล้ว... โดยที่เราจะส่งนักรบที่บ้าพลังที่สุดของเราไปต่อสู้ให้กับท่านลูกค้าเพื่อแลกกับเครดิตพลังงานเป็นการตอบแทน! หากคุณต้องการทหารรับจ้างที่ดีที่สุดในกาแล็กซีล่ะก็ รีบด่วน!"
  marauder.88.a.desc:0 "She of the Void has a message for you:\n\nIf you so desire, you may now hire some of our fleets as mercenaries. Our crews are disciplined and will obey your instructions, as long as you can meet our prices.\n\nThis is an incredible gift that She has bestowed upon you. Do not squander it."
@@ -227,7 +227,7 @@
  marauder.108.a:0 "We must punish this transgression."
  marauder.112.a:0 "ใครจ่ายเงินให้คุณโจมตีเรา?"
  marauder.112.1.a.response:0 "คนขี้ขลาดที่น่าสงสารที่ไม่เต็มใจที่จะเผชิญหน้ากับคุณ Their identity is meaningless, and their ultimate role in the universe even more so.\n\nAnd they paid well for us to keep their identity to ourselves."
- marauder.112.2.a.response:0 "Ah, but that secret, dwamak! They were dwamaks, like yourself, but other dwamaks. That all we can say."
+ marauder.112.2.a.response:0 "ฮ้า! แต่ความลับนั้นคือ... dwamak! พวกเขาเป็น dwamak เหมือนๆกับคุณ แต่เป็น dwamak คนอื่น นั่นคือทั้งหมดที่เราสามารถพูดได้"
  marauder.112.3.a.response:0 "Infidels. Unbelievers. Heretics.\n\nWe would just as soon have nothing to do with them, but their energy credits will help to further Her will."
  marauder.112.b:0 "สิ้นสุดการส่ง"
  marauder.114.name:0 "Raid Abandoned"
