--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -110,7 +110,7 @@
  mod_planet_branch_offices_cost_mult:0 "ค่าสำนักงานสาขา"
  ap_universal_transactions:0 "ธุรกรรมแบบสากล"
  ap_universal_transactions_desc:1 "เราจะขยายแบรนด์และธุรกิจของเราไปยังทุกระบบสุริยะในกาแล็กซี ความมั่งคั่งจะอยู่ชั่วนิรันดร์!"
- free_commercial_pacts:0 "ไม่ต้องใช้ £influence£ ค่าอิทธิพลในการรักษา §Yสนธิสัญญาการค้า§! เอาไว้อีกต่อไป"
+ free_commercial_pacts:1 "สามารถเสนอ §Yสนธิสัญญาการค้า§! ได้โดยไม่ต้องมีสถานทูต\n§Yสนธิสัญญาการค้า§! ไม่ต้องใช้ £influence£ §Yอิทธิพล§! ในการคงสนธิสัญญาเอาไว้อีกต่อไป"
  federation_tax:0 "ภาษีสหพันธ์"
  in_federation:0 "ในสหพันธ์"
  DEVASTATION_DISABLE_FTL_INHIBITOR:0 "การทำลายล้างดาวเคราะห์สูงกว่า $THRESHOLD|%Y$ §YFTL inhibitors§! จะไม่ทำงาน"
@@ -390,7 +390,7 @@
  BUILDING_SLOT_LOCKED:0 "ช่องสิ่งปลูกสร้างถูกล็อก"
  BUILDING_SLOT_LOCKED_DESC:2 "ช่องจะปลดล็อกเมื่อสร้าง $CITY_DISTRICT|Y$ หรืออัปเกรด $CAPITAL_BUILDING|Y$ ของคุณ"
  BUILDING_SLOT_LOCKED_HABITAT_DESC:2 "ช่องจะปลดล็อกเมื่อสร้าง §Yเขตต่างๆ§!, §Y$major_orbital_generic_plural$§! หรืออัปเกรด $CAPITAL_BUILDING|Y$ ของคุณ"
- BUILDING_SLOT_LOCKED_BRANCH_OFFICE_DESC:3 "Branch Office building slots are unlocked by upgrades to this planet's $CAPITAL_BUILDING|Y$."
+ BUILDING_SLOT_LOCKED_BRANCH_OFFICE_DESC:3 "ช่องสล็อตสิ่งปลูกสร้างสำนักงานสาขาจะปลดล็อกโดยการอัปเกรดเป็น $CAPITAL_BUILDING|Y$ ของดาวนี้"
  BUILDING_CAPPED_IN_EMPIRE_WITH_NUM:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$NUM$/$MAX$§!"
  BUILDING_CAPPED_IN_EMPIRE:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$MAX$§!"
  BUILDING_CAPPED_ON_PLANET_WITH_NUM:0 "จำกัดจำนวนต่อดาว: §Y$NUM$/$MAX$§!"
@@ -398,7 +398,7 @@
  DEPOSITS_TITLE:0 "คุณสมบัติดาวเคราะห์"
  DEPOSITS_TOOLTIP:1 "§Hคุณสมบัติของดาวเคราะห์§!\nแสดงถึง §Yสิ่งกีดขวาง§! หรือ §Yคุณสมบัติที่หายาก§! ที่ดาวนี้มีและคุณสมบัติของดาวเคราะห์ที่เป็นพื้นที่ในแบบต่างๆ"
  TERRAFORM_TOOLTIP:0 "ปรับสภาพดาวเคราะห์"
- PLANETARY_OUTPUT:0 "Resource Production"
+ PLANETARY_OUTPUT:0 "การผลิตทรัพยากร"
  PLANETARY_PRODUCTION:0 "การผลิตของดาวเคราะห์"
  PLANETARY_DEFICIT:0 "การขาดดุลของดาวเคราะห์"
  PLANETARY_INPUT:0 "ค่าบำรุงรักษาที่เป็นทรัพยากร"
@@ -596,6 +596,10 @@
  building_nanite_transmuter_desc:3 "This factory mass-produces a variety of rare resources using extremely advanced nanites. A Nanite deficit will halt production."
  building_hab_major_capital:0 "ที่อยู่อาศัยที่ควบคุมจากส่วนกลาง (เมืองหลวง)"
  building_hab_major_capital_desc:1 "สำนักงานระบบราชการที่ซับซ้อนกว้างขวางซึ่งดูแลการบริหารที่อยู่อาศัยที่มีประชากรสูง"
+ building_hab_major_capital_tooltip: "£mod_planet_max_districts_add£ Max District Slots from $major_orbital_plural$: §G+0.25§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ from $major_orbital_generic_plural$: §G+0.25§!\n"
+ building_hab_system_capital: "Habitat System Control"
+ building_hab_system_capital_desc: "A huge sprawling complex of bureaucratic offices that oversees the administration of a highly-populated habitat."
+ building_hab_system_capital_tooltip: "£mod_planet_max_districts_add£ Max District Slots from $major_orbital_plural$: §G+0.50§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ from $major_orbital_generic_plural$: §G+0.50§!\n"
  district_hab_housing:0 "เขตที่อยู่อาศัย"
  district_hab_housing_plural:0 "เขตที่อยู่อาศัย"
  district_hab_housing_desc:1 "A habitat housing district provides comfortable, if compact residences for its population."
@@ -769,7 +773,7 @@
  job_cyber_drone:0 "Augmentation Drone"
  job_cyber_drone_plural:0 "Augmentation Drones"
  job_cyber_drone_desc:0 "We have optimized our drone growth by introducing cybernetic enhancements during the infant state."
- job_cyber_drone_effect_desc:0 "£job_cyber_drone£ $job_cyber_drone_plural$ turn £alloys£ §Y$alloys$§! into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+ job_cyber_drone_effect_desc:0 "£job_cyber_drone£ $job_cyber_drone_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
  mod_job_cyber_drone_add:0 "$job_cyber_drone$ Jobs"
  mod_job_cyber_drone_per_pop:0 "§G+1§! $job_cyber_drone$ Job per $VALUE$ Pops"
  mod_job_cyber_drone_per_pop_short:0 "\n§G+1§! £mod_job_cyber_drone_add£ per $VALUE$ £pop£"
@@ -949,7 +953,7 @@
  job_trader_plural: "นักเทรด"
  job_trader_plural_with_icon: "£job_trader£ $job_trader_plural$"
  job_trader_desc: "These proud deal-makers boost the value of everyday commodities, and expedite the movement of goods to where they are most needed or desired."
- job_trader_effect_desc: "$job_trader_plural_with_icon$ turn $r_consumer_goods$ into $r_trade_value$"
+ job_trader_effect_desc: "$job_trader_plural_with_icon$ เปลี่ยน $r_consumer_goods$ เป็น $r_trade_value$"
  mod_job_trader_add: "งาน $job_trader$"
  mod_job_trader_per_pop: "§G+1§! $job_trader$ Job per $VALUE$ Pops"
  mod_job_trader_per_pop_short: "\n§G+1§! £mod_job_trader_add£ per $VALUE$ £pop£"
@@ -959,7 +963,7 @@
  job_numistic_priest_plural: "Numistic Priests"
  job_numistic_priest_plural_with_icon: "£job_numistic_priest£ $job_numistic_priest_plural$"
  job_numistic_priest_desc: "These zealous facilitators of commerce have vowed to squeeze every last drop of value from deals carried out in Numa's name."
- job_numistic_priest_effect_desc: "$job_numistic_priest_plural_with_icon$ turn $r_consumer_goods$ into $r_unity$, $r_trade_value$, and $r_amenities$"
+ job_numistic_priest_effect_desc: "$job_numistic_priest_plural_with_icon$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$"
  mod_job_numistic_priest_add: "$job_numistic_priest$ Jobs"
  mod_job_numistic_priest_per_pop: "§G+1§! $job_numistic_priest$ Job per $VALUE$ Pops"
  mod_job_numistic_priest_per_pop_short: "\n§G+1§! £mod_job_numistic_priest_add£ per $VALUE$ £pop£"
@@ -1134,7 +1138,7 @@
  job_steward: "Steward"
  job_steward_plural: "Stewards"
  job_steward_desc: "These democratically-elected volunteers ensure the smooth running of our cooperative society, for the benefit of all its members."
- job_steward_effect_desc: "£job_steward£ $job_steward_plural$ turn $r_consumer_goods$ into $r_unity$, $r_trade_value$, and $r_amenities$"
+ job_steward_effect_desc: "£job_steward£ $job_steward_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$"
  mod_job_steward_add:0 "$job_steward$ Jobs"
  mod_job_steward_per_pop:0 "§G+1§! $job_steward$ Job per $VALUE$ Pops"
  mod_job_steward_per_pop_short:0 "\n§G+1§! £mod_job_steward_add£ per $VALUE$ £pop£"
@@ -1741,6 +1745,7 @@
  requires_building_major_hive_capital:1 "§Rต้องการ §Y$building_hive_major_capital$§! บนดาว§!"
  requires_building_hab_capital:0 "§Rต้องการ §Y$building_hab_capital$§! บนดาว§!"
  requires_building_hab_major_capital:0 "§Rต้องการ §Y$building_hab_major_capital$§! บนดาว§!"
+ requires_building_hab_system_capital: "§Rต้องการ §Y$building_hab_system_capital$§! บนดาว§!"
  requires_building_resort_capital:0 "§Rต้องการ §Y$building_resort_capital$§! บนดาว§!"
  requires_building_resort_major_capital:0 "§Rต้องการ §Y$building_resort_major_capital$§! บนดาว§!"
  requires_building_slave_capital:0 "§Rต้องการ §Y$building_slave_capital$§! บนดาว§!"
@@ -2903,6 +2908,7 @@
  col_habitat_leisure_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อความบันเทิงและวัฒนธรรมในห้วงอวกาศ"
  col_habitat_trade:0 "สถานีการค้า"
  col_habitat_trade_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการค้าในห้วงอวกาศ"
+ col_habitat_trade_custom: "§Y$district_hab_housing_plural$§! will replace one £job_clerk£ §Y$job_clerk$§! Job with one £job_trader£ §Y$job_trader$§! Job\n"
  col_habitat_fortress:0 "สถานีป้อมปราการ"
  col_habitat_fortress_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อโครงสร้างการป้องกันในห้วงอวกาศ"
  col_habitat_foundry:0 "สถานีโรงหล่อ"
@@ -2919,8 +2925,10 @@
  col_habitat_mining_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการเก็บแร่ในห้วงอวกาศ"
  col_habitat_farming:0 "สถานีปลูกพืชไร้ดิน"
  col_habitat_farming_desc:0 "มหานครที่ถูกสร้างขึ้นในอวกาศเพื่อเพิ่มการเจริญเติบโตของพืช"
+ col_habitat_farming_desc_custom: "§Y$district_hab_housing_plural$§! will replace £job_clerk£ §Y$job_clerk$§! Jobs with £job_farmer£ §Y$job_farmer$§! Jobs\n"
  col_habitat_gestalt_farming:0 "$col_habitat_farming$"
  col_habitat_gestalt_farming_desc:0 "$col_habitat_farming_desc$"
+ col_habitat_gestalt_farming_desc_custom: "§Y$district_hab_housing_plural$§! will replace £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_agri_drone£ §Y$job_agri_drone$§! Jobs\n"
  col_habitat_energy:0 "สถานีกำเนิดพลังงาน"
  col_habitat_energy_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตพลังงานในห้วงอวกาศ"
  col_ring_mix:0 "โลกวงแหวน"
@@ -3413,12 +3421,12 @@
  fleet3deal2cost1:0 "£energy£ §G300§! $energy$"
  fleet3deal2cost2:0 "£food£ §R200§! $food$"
  fleet3deal2cost3:1 "£consumer_goods£ §R150§! §Y$consumer_goods$§!"
- fleet3deal4cost1:0 "if you grant us £sr_dark_matter£ §R15§! §Y$sr_dark_matter$§!."
- fleet3deal4cost2:1 "if you grant us £rare_crystals£ §R55§! §Y$rare_crystals$§!."
- fleet3deal4cost3:0 "if you grant us £sr_zro£ §R15§! §Y$sr_zro$§!."
+ fleet3deal4cost1:0 "ถ้าคุณให้เรา £sr_dark_matter£ §R15§! §Y$sr_dark_matter$§!"
+ fleet3deal4cost2:1 "ถ้าคุณให้เรา £rare_crystals£ §R55§! §Y$rare_crystals$§!"
+ fleet3deal4cost3:0 "ถ้าคุณให้เรา £sr_zro£ §R15§! §Y$sr_zro$§!"
  fleet3deal4product1:0 "This alloy. The weight. The lustre. The glow! Have you ever seen such metallic bonding? Incredible yield strength. Maximum grade. Nominal impurities. We can feel it. It calls to you.\n\nWe will give to you £alloys£ §G2000§! §Y$alloys$§!,"
  fleet3deal4product2:0 "These exotic gases. Effervescent. Compressed to maximum density, for logistical convenience. Highly volatile - careful! You desire them, do you not? For your shields, your plasma cannons? They can be yours.\n\nWe will give you £exotic_gases£§G150§! §Y$exotic_gases$§!,"
- fleet3deal4product3:0 "This metal. It moves. It flows. It reconstructs, §Hkssk!§! We have found many uses for it. We are certain you shall, too.\n\nWe will give you £sr_living_metal£  §G40§! §Y$sr_living_metal$§!,"
+ fleet3deal4product3:0 "This metal. It moves. It flows. It reconstructs, §Hkssk!§! We have found many uses for it. We are certain you shall, too.\n\nเราจะให้คุณ £sr_living_metal£  §G40§! §Y$sr_living_metal$§!,"
  fleet3deal2product1_tooltip:0 "A §GSkill 3§! §HScientist§! joins the [Root.GetName]"
  fleet3deal2product2_tooltip:0 "A §GSkill 3§! §HGovernor§! joins the [Root.GetName]"
  fleet3deal5cost_tooltip:1 "§R-3§! §H$pop_cat_worker$§! £pop£ Pops"
@@ -3832,7 +3840,7 @@
  planet_pops_organics_consumer_goods_upkeep_mult:0 "£pop£ ประชากร £consumer_goods£ ค่าบำรุงรักษาที่เป็นสินค้าอุปโภคบริโภค"
  planet_pops_organics_upkeep_mult:0 "ค่าบำรุงรักษาของ £pop£ ประชากร"
  MESSAGE_NEW_BRANCH_OFFICE_TITLE:0 "สำนักงานสาขาใหม่"
- MESSAGE_NEW_BRANCH_OFFICE:0 "The $COUNTRY|Y$ Megacorporation has established a new Branch Office on $PLANET|Y$."
+ MESSAGE_NEW_BRANCH_OFFICE:0 "บริษัทขนาดใหญ่ $COUNTRY|Y$ ได้ตั้งสำนักงานสาขาแห่งใหม่บนดาว $PLANET|Y$"
  MESSAGE_CLOSED_BRANCH_OFFICE_TITLE:0 "Branch Office Closed"
  MESSAGE_CLOSED_BRANCH_OFFICE:0 "The $COUNTRY|Y$ Megacorporation has closed down their Branch Office on $PLANET|Y$."
  MESSAGE_LOST_MARKET_STATION_TITLE:0 "Market Station Lost"
