--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -56,8 +56,8 @@
  ACTION_INVITE_TO_FEDERATION_VOTE_FAILED:0 "The vote to invite §H[Recipient.GetName]§! into the §H[Actor.GetAllianceName]§! failed."
  ACTION_ASK_TO_JOIN_ALLIANCE_VOTE_PASSED:0 "The §H[Recipient.GetAllianceName]§! voted to invite §H[Actor.GetName]§! into the Alliance."
  ACTION_ASK_TO_JOIN_ALLIANCE_VOTE_FAILED:0 "The vote to invite §H[Actor.GetName]§! into the §H[Recipient.GetAllianceName]§! failed."
- ACTION_FORM_FEDERATION_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to form a Federation."
- ACTION_FORM_FEDERATION_VOTE_FAILED:0 "The vote to form a federation failed."
+ ACTION_FORM_FEDERATION_VOTE_PASSED:0 "§H[Actor.GetAllianceName]§! โหวตให้ตั้งสหพันธ์"
+ ACTION_FORM_FEDERATION_VOTE_FAILED:0 "การโหวตเพื่อจัดตั้งสหพันธ์ล้มเหลว"
  ACTION_RELEASE_SUBJECT_PASSED:0 "§H[Actor.GetName]§! has released us from being a Subject."
  ACTION_OFFER_PEACE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to accept signing a peace offer with §H[Recipient.GetName]§!."
  ACTION_OFFER_PEACE_VOTE_FAILED:0 "The §H[Actor.GetAllianceName]§! voted to reject signing a peace offer with §H[Recipient.GetName]§!."
@@ -203,7 +203,7 @@
  ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! left the §H[From.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
  ACTION_DEMAND_SUBJUGATION_NOTIFICATION:3 "§H[From.GetName]§! ปราบ §H[Root.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_ASK_TO_BECOME_SUBJUGATED_NOTIFICATION:3 "§H[Root.GetName]§! ปราบ §H[From.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
- ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! voted to a form a $FEDERATION$.\n\nThey have chosen to go into the galaxy together as one."
+ ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! โหวตให้ตั้ง $FEDERATION$\n\nพวกเขาได้เลือกที่จะอยู่ในกาแล็กซีด้วยกันเป็นหนึ่งเดียวกัน"
  ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! เข้าร่วมกับ §H[From.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! เข้าร่วมกับ §H[Root.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_LEAVE_FEDERATION_NOTIFICATION:0 "$ACTION_LEAVE_FEDERATION_NOTIFICATION$"
