--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -49,9 +49,9 @@
  MOD_COUNTRY_SECTOR_CAP_ADD:0 "ขีดจำกัดของเซ็กเตอร์"
  mod_country_base_energy_produces_mult:0 "การสร้างพลังงานของจักรวรรดิ"
  mod_country_base_minerals_produces_mult:0 "การผลิตแร่ของจักรวรรดิ"
- mod_country_base_consumer_goods_produces_add: "Empire Consumer Goods Production"
- mod_country_base_alloys_produces_add: "Empire Alloys Production"
- mod_country_base_nanites_produces_add: "Empire Nanites Production"
+ mod_country_base_consumer_goods_produces_add: "การผลิตสินค้าอุปโภคบริโภคของจักรวรรดิ"
+ mod_country_base_alloys_produces_add: "การผลิตโลหะผสมของจักรวรรดิ"
+ mod_country_base_nanites_produces_add: "การผลิตนาไนต์ของจักรวรรดิ"
  MOD_ASSIST_RESEARCH_MULT:1 "ช่วยเพิ่มประสิทธิภาพการวิจัย"
  MOD_COUNTRY_NUM_TECH_ALTERNATIVES_ADD:0 "ทางเลือกในการวิจัย"
  MOD_COUNTRY_PREVIOUS_DEALS:0 "ตกลงก่อนหน้า"
@@ -165,11 +165,11 @@
  mod_pop_job_trade_mult:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน"
  mod_pop_lifestyle_trade_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
  mod_pop_job_amenities_mult:0 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน"
- mod_living_standard_trade_value_rulers_add: "£trade_value£ Trade Value from $RULERS$"
- mod_living_standard_trade_value_specialists_add: "£trade_value£ Trade Value from $SPECIALISTS$"
- mod_living_standard_trade_value_workers_add: "£trade_value£ Trade Value from $WORKERS$"
- mod_living_standard_trade_value_slaves_add: "£trade_value£ Trade Value from $SLAVES$"
- mod_living_standard_trade_value_criminals_add: "£trade_value£ Trade Value from $CRIMINALS$"
+ mod_living_standard_trade_value_rulers_add: "£trade_value£ มูลค่าการค้าจาก $RULERS$"
+ mod_living_standard_trade_value_specialists_add: "£trade_value£ มูลค่าการค้าจาก $SPECIALISTS$"
+ mod_living_standard_trade_value_workers_add: "£trade_value£ มูลค่าการค้าจาก $WORKERS$"
+ mod_living_standard_trade_value_slaves_add: "£trade_value£ มูลค่าการค้าจาก $SLAVES$"
+ mod_living_standard_trade_value_criminals_add: "£trade_value£ มูลค่าการค้าจาก $CRIMINALS$"
  mod_job_soldier_stability_add:1 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier] [GetSoldierPlural]"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
@@ -823,7 +823,7 @@
  cybrex_uninhabitable_category_research_speed_add:0 "$cybrex_uninhabitable_category_research_speed_mult$"
  cybrex_habitable_category_research_speed_add:0 "$cybrex_habitable_category_research_speed_mult$"
  mod_category_materials_research_speed_mult:1 "ความเร็วในการวิจัย (§Yวัสดุ§!)"
- mod_category_propulsion_research_speed_mult:1 "ความเร็วในการวิจัย (§Yการขับเคลื่อน§!)"
+ mod_category_propulsion_research_speed_mult:1 "ความเร็วในการวิจัย (§Yระบบขับเคลื่อน§!)"
  mod_category_voidcraft_research_speed_mult:1 "ความเร็วในการวิจัย (§Yยานอวกาศ§!)"
  mod_category_robotics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yหุ่นยนต์§!)"
  mod_category_industry_research_speed_mult:1 "ความเร็วในการวิจัย (§Yอุตสาหกรรม§!)"
