--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -114,6 +114,7 @@
  menp_undertaker_desc:3 "Imagine a species full of vibrant life and unbridled potential - now make it §Rstop§!."
  menp_intimidation:0 "Intimidation"
  menp_intimidation_desc:2 "There is always another option. It is death."
+ menp_intimidation_tt: "Proposing Subjugation ignores Diplomatic requirements.\n"
  menp_base_breaker:0 "Base Breaker"
  menp_base_breaker_desc:3 "Overwhelming firepower provides perspective - the ability to see a supposed fortress for what it is: a sitting duck."
  menp_relentless_aggression:0 "Relentless Aggression"
@@ -726,7 +727,7 @@
  sabotaged_orbital_ring_habitation:0 "ก่อวินาศกรรม $sm_orbital_ring_habitation$"
  sabotaged_orbital_ring_hangar_bay:0 "ก่อวินาศกรรม $sm_orbital_ring_hangar_bay$"
  sabotaged_orbital_ring_missile_battery:0 "ก่อวินาศกรรม $sm_orbital_ring_missile_battery$"
- sabotaged_orbital_ring_feeder: "$orbital_ring_feeder$ Sabotaged"
+ sabotaged_orbital_ring_feeder: "ก่อวินาศกรรม $orbital_ring_feeder$"
  sabotaged_ring_alloys_hub:0 "$sm_ring_alloys_hub$ Sabotaged"
  sabotaged_ring_bureaucracy_hub:0 "$sm_ring_bureaucracy_hub$ Sabotaged"
  sabotaged_ring_consumer_goods_hub:0 "$sm_ring_consumer_goods_hub$ Sabotaged"
