--- a/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
@@ -40,7 +40,7 @@
  menacing_actions_deception_veto_resolution_desc:0 "Vetoing a resolution will yield §H100§! £menace£ Menace per resolution."
  menacing_actions_deception_call_in_favor_title:0 "Call in favor"
  menacing_actions_deception_call_in_favor_desc:0 "Calling in a favor will yield §H1§! £menace£ Menace per £favor£ Favor."
- menacing_actions_deception_win_humiliation_war_title:0 "Win a Humiliation War"
+ menacing_actions_deception_win_humiliation_war_title:0 "ชนะสงครามดูถูกเหยียดหยาม"
  menacing_actions_deception_win_humiliation_war_desc:0 "Winning a Humiliation War will yield §H200§! £menace£ Menace."
  crisis_perk:0 "Crisis Perk"
  crisis_perk_plural:0 "Crisis Perks"
