--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -432,7 +432,7 @@
  OUTLINER_OVERLORD_HOLDINGS:0 "$HOLDINGS$"
  MOD_PLANET_MAX_SUBJECT_HOLDING_BUILDINGS_ADD:1 "$HOLDINGS$ สูงสุด"
  MOD_PLANET_MAX_OVERLORD_HOLDING_BUILDINGS_ADD:1 "$HOLDINGS$ สูงสุด"
- FROM_EXTERNALLY_OWNED_BUILDINGS:0 "From $HOLDINGS$"
+ FROM_EXTERNALLY_OWNED_BUILDINGS:0 "จาก$HOLDINGS$"
  BUILDING_SLOT_LOCKED_SUBJECT_HOLDING_DESC:0 "Subject Holding slots are unlocked by negotiating the §YHoldings Limit§! term of your §YSubject Agreement§!."
  BUILDING_SLOT_LOCKED_OVERLORD_HOLDING_DESC:0 "Overlord Holding slots are unlocked by negotiating the §YHoldings limit (On overlord)§! term of your §YSubject Agreement§!."
  HAS_HOLDING:0 "Has Holding: $HOLDING|Y$"
@@ -455,7 +455,7 @@
  AGREEMENTS_HOLDINGS_TITLE:0 "การถือครอง §Y($CURRENT$/$MAXIMUM$)§!"
  BUILDING_SLOT_OPEN_AGREEMENTS_HOLDINGS_DESC:0 "§EA Holding can be constructed by the Overlord on one of the Subject's planets.§!"
  AGREEMENT_HOLDINGS_OPEN_CAPITAL_PLANET:0 "§GClick to open Planet View of the empire capital§!"
- HOLDING_RESOURCES_TARGET_COUNTRY:0 "§HFor $COUNTRY|Y$:§!"
+ HOLDING_RESOURCES_TARGET_COUNTRY:0 "§Hสำหรับ $COUNTRY|Y$:§!"
  OVERLORD_HOLDING_CONSTRUCTION_TITLE:0 "Overlord Holding Construction Complete"
  OVERLORD_HOLDING_CONSTRUCTION_DESC:0 "Our Overlord $OVERLORD|Y$ has finished building a $HOLDING|Y$ on our planet $PLANET|Y$."
  holding_garrison:0 "Overlord Garrison"
