--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -172,6 +172,7 @@
  COUNCIL_AGENDA_FINISH_MODIFIER_TITLE:0 "§Eเมื่อใช้งาน:§!"
  COUNCIL_AGENDA_FINISH_EFFECT_TITLE:0 "§Eเอฟเฟกต์เมื่อใช้งาน:§!"
  COUNCIL_AGENDA_DELAYED_TOOLTIP:1 "§L$DESCRIPTION$§!"
+ COUNCIL_AGENDA_COST_TOOLTIP: "§Eเวลาที่เริ่ม:§! £time£ $TIME|Y$ เดือน"
  ACTIVE_AGENDA_EFFECTS_TOOLTIP:0 "§Hเริ่มแผนการไปแล้ว§!"
  ACTIVE_AGENDA_EFFECTS_TOOLTIP_DELAYED:0 "§ELists Agendas that are launched and still have effect.§!"
  AVAILABLE_AGENDAS:0 "แผนที่มี"
@@ -297,7 +298,7 @@
  LEADER_MACHINE_EMPIRE_DEATH_REASON:0 "[Root.GetLeaderMachineEmpireDeathReason]"
  LEADER_PARAGON_DEATH_REASON:0 "[Root.GetLeaderParagonDeathReason]"
  LEADER_PARAGON_RETIREMENT_REASON:0 "[Root.GetLeaderParagonRetirementReason]"
- death_reason_generic_1:0 "Retired at the age of [Root.GetAge]."
+ death_reason_generic_1:0 "เกษียณเมื่ออายุ [Root.GetAge]"
  death_reason_generic_2:0 "Stepped down due to health issues."
  death_reason_generic_3:1 "Resigned due to a deteriorating mental state."
  death_reason_generic_4:0 "Stepped down to make way for successors."
@@ -952,24 +953,24 @@
  leader_trait_science_communicator_2:0 "$leader_trait_science_communicator$ II"
  leader_trait_science_communicator_2_desc:0 "$leader_trait_science_communicator_desc$"
  only_one_scientist_focus:0 "\n§YOnly one Scientist focus can be selected.§!"
- mod_category_statecraft_draw_chance_mult:0 "โอกาสสำหรับตัวเลือกการวิจัย §Yการปกครอง§!"
- mod_category_biology_draw_chance_mult:0 "Chance for §YBiology§! Research Options"
- mod_category_military_theory_draw_chance_mult:0 "Chance for §YMilitary Theory§! Research Options"
- mod_category_computing_draw_chance_mult:0 "Chance for §YComputing§! Research Options"
- mod_category_field_manipulation_draw_chance_mult:0 "Chance for §YField Manipulation§! Research Options"
- mod_category_particles_draw_chance_mult:0 "Chance for §YParticles§! Research Options"
- mod_category_new_worlds_draw_chance_mult:0 "Chance for §YNew Worlds§! Research Options"
- mod_category_psionics_draw_chance_mult:0 "Chance for §YPsionics§! Research Options"
- mod_category_industry_draw_chance_mult:0 "Chance for §YIndustry§! Research Options"
- mod_category_materials_draw_chance_mult:0 "Chance for §YMaterials§! Research Options"
- mod_category_propulsion_draw_chance_mult:0 "Chance for §YPropulsion§! Research Options"
- mod_category_voidcraft_draw_chance_mult:0 "Chance for §YVoidcraft§! Research Options"
- mod_category_archaeostudies_draw_chance_mult:0 "Chance for §YArchaeostudies§! Research Options"
+ mod_category_statecraft_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yการปกครอง§!"
+ mod_category_biology_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yชีววิทยา§!"
+ mod_category_military_theory_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yทฤษฎีการทหาร§!"
+ mod_category_computing_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yการคำนวณ§!"
+ mod_category_field_manipulation_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yการควบคุมสนามพลัง§!"
+ mod_category_particles_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yอนุภาค§!"
+ mod_category_new_worlds_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yโลกใหม่§!"
+ mod_category_psionics_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yพลังจิต§!"
+ mod_category_industry_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yอุตสาหกรรม§!"
+ mod_category_materials_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yวัสดุ§!"
+ mod_category_propulsion_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yระบบขับเคลื่อน§!"
+ mod_category_voidcraft_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yยานอวกาศ§!"
+ mod_category_archaeostudies_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yการศึกษาโบราณคดี§!"
  leader_trait_narrow_minded:0 "Narrow-Minded"
  leader_trait_narrow_minded_desc:0 "This leader has a very narrow focus on potential research, disregarding some options as unnecessary."
  leader_trait_neurotic:1 "Neurosis"
  leader_trait_neurotic_desc:0 "This leader takes too many precautions, with a complete disregard for efficiency."
- leader_trait_opinionated:1 "Stubbornness"
+ leader_trait_opinionated:1 "ดื้อรั้น"
  leader_trait_opinionated_desc:0 "This leader keeps strong opinions on certain topics, making collaboration with other researchers difficult."
  leader_trait_destructive:1 "ไม่รักษาของ"
  leader_trait_destructive_desc:0 "This leader does not concern themself with the well-being of spacecraft or machinery, which in turn needs constant repairs and maintenance to be kept operational."
@@ -1061,9 +1062,9 @@
  leader_trait_intimidator_desc:1 "This leader possesses a grim presence, easily intimidating fearful enemies."
  leader_trait_micromanager:0 "Micromanager"
  leader_trait_micromanager_desc:1 "This leader can only control a limited fleet, as they demand to oversee every detail of its operation."
- leader_trait_reckless:1 "Recklessness"
+ leader_trait_reckless:1 "ประมาทเลินเล่อ"
  leader_trait_reckless_desc:1 "This leader is reckless and disregards any safety procedures during combat, pushing ships to their limit."
- leader_trait_slipshod:1 "Negligence"
+ leader_trait_slipshod:1 "ไม่เอาใจใส่"
  leader_trait_slipshod_desc:1 "This leader lacks the organizational skills to maintain their fleet to combat readiness."
  leader_trait_archaeo_specialization: "Archaeotech Focus"
  leader_trait_archaeo_specialization_desc:1 "This leader favors ancient technology, convinced that they will bring unexpected advantages to the battlefield."
@@ -1214,7 +1215,7 @@
  leader_trait_mediator:0 "Xeno-Mediator"
  leader_trait_mediator_desc:1 "A skilled mediator is essential in highly diverse population centers. This leader knows how to defuse tension and efficiently manage a multi-species planet."
  leader_trait_mediator_effect:0 "$PLANET_EFFECTS_TXT$:\n$t$เพิ่มผลผลิต £amenities£$PLANET_AMENITIES_TITLE$ §G1%§! ต่อเผ่าพันธุ์ต่างๆบนดาวเคราะห์\n$t$เพิ่ม §Y$MOD_POP_HAPPINESS$§! §G1%§! ต่อเผ่าพันธุ์ต่างๆบนดาวเคราะห์\n$t$$MOD_POP_GROWTH_FROM_IMMIGRATION$: §G+20%§!"
- leader_trait_efficient:0 "Elite Benefactor"
+ leader_trait_efficient:0 "ผู้อุปถัมภ์ชนชั้นสูง"
  leader_trait_efficient_desc:1 "Born into the higher echelons of society, this leader has a strong sense of their own worth, and tends to favor peers of the upper classes."
  leader_trait_galvanizer:0 "Galvanizer"
  leader_trait_galvanizer_effect_non_gestalt:1 "$PLANET_EFFECTS_TXT$:\n$t$£unity£ $unity$ from Employed £pop£ Pops: §G+0.50§!\n$t$£society£ $society_research$ from Employed £pop£ Pops: §G+0.50§!\n$t$£trade_value£ Trade Value from Employed £pop£ Pops: §G+0.25§!"
@@ -1482,7 +1483,7 @@
  civic_task_delegation_corporate_desc:1 "This megacorporation operates on a highly optimized and robust system of delegation. Such an approach means that a given task is always performed by the most qualified worker."
  civic_private_healthcare_corporate:1 "รัฐยาและเภสัชกรรม"
  civic_private_healthcare_corporate_desc:1 "A strong nation is a healthy nation. This megacorporation maintains a robust economy through experimental drugs, highly privatized clinics, and aggressive marketing campaigns."
- civic_tooltip_civic_private_healthcare_corporate_effects:2 "$r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n$r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\nสามารถสร้าง £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$ ได้"
+ civic_tooltip_civic_private_healthcare_corporate_effects:3 "- £building£ §YCapital Buildings§! ให้ §G+1§! งาน  £job_healthcare£ §Y$job_healthcare$§!\n- $r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n- $r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\n- สามารถสร้าง £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$"
  civic_machine_upkeep_twister:1 "วงจรผู้ปกครองสูงสุด"
  civic_machine_upkeep_twister_desc:1 "Units produced by this machine intelligence come equipped with autonomous decision-making software. More efficient and effective than older models, these units nevertheless require greater power input."
  civic_tooltip_machine_upkeep_twister_effects:2 "เปลี่ยนค่าบำรุงรักษาผู้นำจากเดิม §Y1§! $r_unity$ เป็น §Y2§! $r_energy$ แทน"
