--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -665,8 +665,8 @@
  factions.3000.b.auth:0 "We cannot allow this."
  planet_political_frontier:0 "Political Frontier"
  planet_political_frontier_desc:0 "This colony is considered fertile ground for campaigns by Factions across the political spectrum."
- planet_political_safezone:0 "Politically Assured"
- planet_political_safezone_desc:0 "Political Factions are being discouraged from campaign work within this colony."
+ planet_political_safezone:0 "มั่นใจทางการเมือง"
+ planet_political_safezone_desc:0 "กลุ่มการเมืองกำลังท้อแท้จากการรณรงค์ภายในอาณานิคมแห่งนี้"
  planet_political_crackdown:0 "Political Crackdown"
  planet_political_crackdown_desc:0 "Political Factions are actively prevented from campaigning within this colony."
  factions.3005.name:0 "Report: Political Discourse on [root.GetName]"
