--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -18,7 +18,7 @@
  SITUATION_PROGRESS:0 "ความคืบหน้า"
  SITUATION_CURRENT_PROGRESS:0 "ความคืบหน้าปัจจุบัน: $PROGRESS|Y$/$END|Y$"
  SITUATION_PREDICTED_PROGRESS:0 "คาดการณ์เดือนต่อไป: $PROGRESS|Y$ ($CHANGE$)"
- SITUATION_OUTCOME_IN_MONTHS:0 "An outcome will be reached in $MONTHS|Y$ month(s)."
+ SITUATION_OUTCOME_IN_MONTHS:0 "ผลลัพธ์จะบรรลุผลใน $MONTHS|Y$ เดือน"
  SITUATION_NEXT_STAGE_IN_MONTHS:0 "สถานการณ์จะเปลี่ยนไปใน $STAGE_MONTHS|Y$ เดือน และจะจบใน $SITUATION_MONTHS|Y$ เดือน"
  SITUATION_CURRENT_STAGE:0 "ระยะปัจจุบัน: $STAGE|Y$"
  SITUATION_STAGE_ACTIVE_RANGE:1 "ระยะนี้มีผลตั้งแต่ $VALUE1|Y$ ถึง $VALUE2|Y$"
@@ -811,8 +811,8 @@
  casus_belli_cb_end_threat_revenge_for_eaten_star:0 "Ate their Star"
  war_goal_wg_end_threat_revenge_for_eaten_star:0 "$casus_belli_cb_end_threat_revenge_for_eaten_star$"
  war_goal_wg_end_threat_revenge_for_eaten_star_desc:0 "War is waged to utterly conquer the enemy whose star we ate."
- situation_kaleidoscope: "The Kaleidoscope"
- situation_kaleidoscope_type: "The Kaleidoscope"
+ situation_kaleidoscope: "Kaleidoscope"
+ situation_kaleidoscope_type: "Kaleidoscope"
  situation_kaleidoscope_desc: "A colorful energy parasite is infecting our power grid, feasting on our energy supplies. We could indulge it, or use an §YEspionage Operation§! to pass this problem to another empire.\n\n[GetKaleidoscopeMood]."
  situation_kaleidoscope_monthly_change_tooltip: "Starving the §HKaleidoscope§! will lower its §Ymood§!, increasing the chance of negative events. Feeding it will increase it, keeping it appeased and placid."
  situation_unknown_outcome_kaleidoscope: "The Kaleidoscope's §Ymood§! will determine the final outcome."
@@ -825,8 +825,8 @@
  kaleidoscope_progress: "Overload"
  kaleidoscope_mood_angry: "The Kaleidoscope is §Pangry§! and ready to lash out at any moment."
  kaleidoscope_mood_neutral: "The Kaleidoscope is §Sserene§!. As long as it receives food, it should not misbehave."
- kaleidoscope_mood_happy: "The Kaleidoscope is §Bjoyful§!. Its colors are as splendid as its mood."
- global_power_outrage: "Global Power Outage"
+ kaleidoscope_mood_happy: "Kaleidoscope (คาไลโดสโคป) §Bมีความสุข§! สีสันสวยงามพอๆ กับอารมณ์ของมัน"
+ global_power_outrage: "ไฟฟ้าดับทั่วดาว"
  phantom_load: "Phantom Load"
  phantom_load_desc: "Something - or someone - is draining our power grid."
  kaleidoscope_unnerving_patterns: "Unnerving Patterns"
@@ -834,10 +834,10 @@
  kaleidoscope_pilfering_patterns: "Haunting Patterns"
  kaleidoscope_soothing_patterns: "Soothing Patterns"
  kaleidoscope_dazzling_patterns: "Dazzling Patterns"
- mod_trade_routes_energy_produces_mult: "Energy from Trade"
+ mod_trade_routes_energy_produces_mult: "พลังงานจากการค้า"
  r_vacuum_flower: "Vacuum Flower"
  r_vacuum_flower_desc: "The Kaleidoscope's bloom is a fragile florescence of ever-shifting petals, possessing the ability to manipulate, absorb, and reflect light waves."
- relic_vacuum_flower_active: "Grants a different resource production bonus depending on the §YStar Class§! of your capital system."
+ relic_vacuum_flower_active: "ให้โบนัสการผลิตทรัพยากรที่แตกต่างกันขึ้นอยู่กับ §YClass ของดาว§! ในระบบศูนย์กลางของคุณ"
  relic_vacuum_flower_B: "Blooming Star (Class B)"
  relic_vacuum_flower_A: "Blooming Star (Class A)"
  relic_vacuum_flower_F: "Blooming Star (Class F)"
@@ -915,7 +915,7 @@
  situation.2048.b: "We can't spare the energy."
  situation.2049.name: "Wonder Sphere"
  situation.2049.desc: "The Kaleidoscope has latched onto the modified Dyson Sphere we provided, consuming the energy of a star and extending its colorful petals to encompass the whole system. According to our data, the energy being is now in a state of constant, controlled overload, perpetually growing new buds and bursting in an endless cycle akin to death and rebirth.\n\nWe do not know if the being is capable of thought, but we hope its existence is now as pleasant as the patterns of light it produces."
- KALEIDOSCOPE_INFESTATION_FIRST: "Power Outage"
+ KALEIDOSCOPE_INFESTATION_FIRST: "ไฟฟ้าดับ"
  KALEIDOSCOPE_INFESTATION_FIRST_DESC: "A global failure of the energy grid has plunged our capital into total darkness. We must restore §H[root.GetName]§!'s power infrastructure and determine what is taking place."
  KALEIDOSCOPE_INFESTATION: "Color Bleed"
  KALEIDOSCOPE_INFESTATION_DESC: "Once again, the Kaleidoscope has latched to our power grid, consuming our energy and plunging the planet into darkness.\n\nFortunately, we now know how to respond."
