--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -258,7 +258,7 @@
  tr_diplomacy_federal_unity_desc:0 "ผลผลิต £unity£ §Yเอกภาพ§! ของเราเพิ่มขึ้น §G+5%§! ต่อจำนวนสมาชิกของสหพันธ์เรา, และสูงสุดไม่เกิน §G+30%§!"
  tr_diplomacy_federal_unity_delayed:0 "Diversity is an incredible asset, and the insights and perspectives that every member state contributes to our federation will only make our society stronger."
  tr_diplomacy_diplomatic_networking:0 "เครือข่ายทางการทูต"
- tr_diplomacy_diplomatic_networking_desc:0 "สถานทูต: £unity£ §Yเอกภาพ§! §G+3§!"
+ tr_diplomacy_diplomatic_networking_desc:1 "สถานทูต: £unity£ §Yเอกภาพ§! §G+3§!\nอนุญาตให้ดำเนินการทางการทูตขั้นสูงโดยไม่มีสถานทูต"
  tr_diplomacy_diplomatic_networking_gestalt:0 "$tr_diplomacy_diplomatic_networking$"
  tr_diplomacy_diplomatic_networking_delayed:0 "The influence and prowess of our ambassadorial network is a source of great pride to the [This.GetAdj] people."
  tr_diplomacy_diplomatic_networking_gestalt_delayed:0 "Incorporating our diplomatic processes into every aspect of our relations with the other will not just benefit our diplomacy: it will also improve the cohesion of our own decision-making, and ultimately of the entire [This.GetGovernmentName] itself."
@@ -749,7 +749,7 @@
  tr_enmity_outpace_delayed: "Second, make the move your foe is unwilling to."
  tr_enmity_eclipse: "การบดบังรัศมี"
  tr_enmity_eclipse_delayed: "Third, cast a shadow over your adversary once and for all."
- tr_enmity_eclipse_effect: "ได้รับ §Yวิทยาศาสตร์§! £physics£ £society£ £engineering£ เพิ่มขึ้น §G2%§! และผลผลิต £unity£ §Yเอกภาพ§! เพิ่มขึ้น §G2%§! ต่อจำนวน §Yคู่แข่ง§! หลังจากชนะ §Yสงครามดูถูกเหยียดหยาม§!"
+ tr_enmity_eclipse_effect: "ได้รับ $r_research$ และผลผลิต $r_unity$ เพิ่มขึ้น §G2%§! ต่อจำนวน §Yคู่แข่ง§! เป็นเวลา §Y10§! ปี หลังจากชนะ §Yสงครามดูถูกเหยียดหยาม§!"
  enmity_humiliate: "[GetName] gets the §YReaffirmed Superiority§! modifier for §Y10§! years granting them §G2%§! increased $r_research$ and $r_unity$ output per §YRival§!."
  reaffirmed_superiority: "Reaffirmed Superiority"
  reaffirmed_superiority_desc: "Our superiority is unassailable. No one is greater than the [GetName]."
