--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -890,6 +890,8 @@
  IS_NOT_IN_ALLIANCE_WITH_TOOLTIP:0 "Is NOT in an Alliance with $TARGET|Y$"
  IS_RIVAL_TOOLTIP:0 "ได้ประกาศให้ $TARGET|Y$ เป็นคู่แข่งของพวกเขา"
  IS_NOT_RIVAL_TOOLTIP:0 "Has NOT declared $TARGET|Y$ as their Rival."
+ IS_IMPROVING_RELATIONS_WITH_TOOLTIP: "An Envoy is Improving Relations with $TARGET|Y$."
+ IS_NOT_IMPROVING_RELATIONS_WITH_TOOLTIP: "An Envoy is NOT Improving Relations with $TARGET|Y$."
  IS_NEIGHBOR_OF:0 "Is bordering $TARGET|Y$"
  IS_NOT_NEIGHBOR_OF:0 "Is NOT bordering $TARGET|Y$"
  IS_IN_FEDERATION_WITH_TOOLTIP:0 "อยู่ในสหพันธ์เดียวกับ $TARGET|Y$"
@@ -1207,7 +1209,7 @@
  ACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is added"
  DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
  BEGIN_EVENT_CHAIN_EFFECT:1 "เริ่มเหตุการณ์ $NAME$\n\n"
- END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
+ END_EVENT_CHAIN_EFFECT:1 "จบเหตุการณ์ต่อเนื่อง: $NAME$\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
  SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
@@ -1349,10 +1351,10 @@
  SET_SUBJECT_OF_EFFECT:2 "$COUNTRY|Y$ กลายเป็นบริวารภายใต้ $COUNTRYTWO|Y$"
  SET_SUBJECT_OF_EFFECT_NONE:0 "Becomes independent"
  SET_SUBJECT_OF_EFFECT_NONE_WE_VERBOSE: "We become independent."
- SET_SPACEPORT_MODULE_EFFECT_REPLACE:0 "Replaces the $MODULE_REPLACED|Y$ with $MODULE|Y$ on the spaceport.\n"
+ SET_SPACEPORT_MODULE_EFFECT_REPLACE:0 "แทนที่ $MODULE_REPLACED|Y$ ด้วย $MODULE|Y$ บนสถานีท่ายานอวกาศ\n"
  SET_SPACEPORT_MODULE_EFFECT:0 "Adds the $MODULE|Y$ module to the spaceport.\n"
- GUARANTEE_COUNTRY_EFFECT:0 "$COUNTRY$ guarantees the independence of $COUNTRYTWO$"
- GUARANTEE_COUNTRY_EFFECT_FREELY:0 "$COUNTRY$ guarantees the independence of $COUNTRYTWO$ Freely for $AMOUNT$ Days"
+ GUARANTEE_COUNTRY_EFFECT:0 "$COUNTRY$ รับประกันความเป็นอิสระของ $COUNTRYTWO$"
+ GUARANTEE_COUNTRY_EFFECT_FREELY:0 "$COUNTRY$ รับประกันความเป็นอิสระของ $COUNTRYTWO$ เป็นเวลา $AMOUNT$ วัน"
  CHANGE_DOMINANT_SPECIES_EFFECT:1 "$SPECIES|Y$ กลายเป็นเผ่าพันธุ์ที่ปกครองจักรวรรดิ"
  effect_every_playable_country:0 "All Playable Empires"
  effect_random_playable_country:0 "Random Playable Empire"
@@ -1562,7 +1564,7 @@
  SET_FEDERATION_TYPE:1 "$FEDERATION|Y$ is converted into a $TYPE|Y$"
  HAS_FEDERATION_TYPE:0 "$FEDERATION|Y$ is $TYPE|Y$"
  HAS_NOT_FEDERATION_TYPE:0 "$FEDERATION|Y$ is NOT $TYPE|Y$"
- DESTROY_ESPIONAGE_OPERATION_EFFECT:0 "Concludes the $NAME|Y$ espionage operation."
+ DESTROY_ESPIONAGE_OPERATION_EFFECT:0 "บทสรุปปฏิบัติการจารกรรม $NAME|Y$"
  ADD_ESPIONAGE_INFORMATION_EFFECT:0 "Adds $VALUE$ information"
  ADD_SPY_NETWORK_LEVEL:0 "§Yเลเวลการแทรกซึม§! เปลี่ยนแปลง $LEVEL$"
  SET_FEDERATION_SUCCESSION_TYPE:0 "Set $TYPE|Y$ succession type for $FEDERATION|Y$"
@@ -1589,7 +1591,7 @@
  FEDERATION_COHESION_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ cohesion"
  FEDERATION_COHESION_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion"
  START_SITUATION_EFFECT:0 "Starts Situation $SITUATION|Y$"
- DESTROY_SITUATION_EFFECT:0 "Concludes the $NAME|Y$ Situation."
+ DESTROY_SITUATION_EFFECT:0 "บทสรุปสถานการณ์ $NAME|Y$"
  ADD_SITUATION_PROGRESS:0 "The $SITUATION|Y$ Situation advances by $AMOUNT|Y$"
  ADD_SITUATION_PROGRESS_NEGATIVE:0 "The $SITUATION|Y$ Situation recedes by $AMOUNT|Y$"
  SET_SITUATION_APPROACH_EFFECT:1 "Situation Approach is set to '$APPROACH|Y$'. This will have the following effects:\n$EFFECTS$"
